--- a/app/Resources/translations/default/ModulesGAnalyticsAdmin.xlf
+++ b/app/Resources/translations/default/ModulesGAnalyticsAdmin.xlf
@@ -24,13 +24,13 @@ File: modules/ps_googleanalytics/ps_googleanalytics.php:54</note>
         <source>Account ID updated successfully</source>
         <target>Account ID updated successfully</target>
         <note>Context:
-File: modules/ps_googleanalytics/ps_googleanalytics.php:211</note>
+File: modules/ps_googleanalytics/ps_googleanalytics.php:233</note>
       </trans-unit>
       <trans-unit id="8e7b67b44506b7ac6685da041a603044">
         <source>Settings for User ID updated successfully</source>
         <target>Settings for User ID updated successfully</target>
         <note>Context:
-File: modules/ps_googleanalytics/ps_googleanalytics.php:216</note>
+File: modules/ps_googleanalytics/ps_googleanalytics.php:243</note>
       </trans-unit>
     </body>
   </file>
@@ -66,9 +66,9 @@ File: modules/ps_googleanalytics/views/templates/admin/configuration.tpl:47</not
         <note>Context:
 File: modules/ps_googleanalytics/views/templates/admin/configuration.tpl:48</note>
       </trans-unit>
-      <trans-unit id="ade6a18bb6c147db87bc9463240e455a">
-        <source>"Add to cart" actions</source>
-        <target>"Add to cart" actions</target>
+      <trans-unit id="c2083746978ad21222cccce025233610">
+        <source>Add to cart" actions</source>
+        <target>Add to cart" actions</target>
         <note>Context:
 File: modules/ps_googleanalytics/views/templates/admin/configuration.tpl:49</note>
       </trans-unit>
