Changed the terminology 'Best sales' to 'Best sellers'

--- a/install-dev/langs/en/data/meta.xml
+++ b/install-dev/langs/en/data/meta.xml
@@ -7,7 +7,7 @@
     <url_rewrite>page-not-found</url_rewrite>
   </meta>
   <meta id="best-sales" id_shop="1">
-    <title>Best sales</title>
+    <title>Best sellers</title>
     <description>Our best sales</description>
     <keywords/>
     <url_rewrite>best-sales</url_rewrite>
