--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -24,7 +24,7 @@ needs please refer to https://devdocs.prestashop.com/ for more information.
 Changelog for PrestaShop 8
 
 ####################################
-#   v8.0.1 - (2022-12-26)
+#   v8.0.1 - (2022-12-27)
 ####################################
 
 - Back Office:
@@ -70,6 +70,7 @@ Changelog for PrestaShop 8
     - #29632: Select new invoice address automatically (by @lartist)
 - Core:
   - Improvement:
+    - #30676: Upgraded classic theme and ps_contactinfo module (by @nicosomb)
     - #30454: Update composer dependencies (by @mflasquin)
     - #30437: Upgraded to latest symfony 4.4.x (by @nicosomb)
     - #30230: Upgrade cancel-workflow-action so that previous AND next same jobs are canceled except the last one (by @lartist)
@@ -79,7 +80,7 @@ Changelog for PrestaShop 8
     - #29831: Convert 1.7.9 to 8.0.0 in deprecation message (by @matks)
   - Bug fix:
     - #30465: fix(Cart): fix notice saving customization when customer field is empty and not required (by @davidglezz)
-    - GHSA-9qgp-9wwc-v29r: Potential Information exposure in the upload directory   (by @atomiix)
+    - GHSA-9qgp-9wwc-v29r: Potential Information exposure in the upload directory (by @atomiix)
     - #30273: Test id_manufacturer index before accessing it (by @Hlavtox)
     - #30114: Do not build a domain from the module name (Cherry pick of #30080) (by @atomiix)
     - #29079: Change default assignation of Product::pack_stock_type (by @abramofranchetti)
