--- a/translations/default/ModulesLanguageselectorAdmin.xlf
+++ b/translations/default/ModulesLanguageselectorAdmin.xlf
@@ -12,6 +12,11 @@
         <target>Adds a block allowing customers to select a language for your store's content.</target>
         <note>Line: 52</note>
       </trans-unit>
+      <trans-unit id="b57c5dde917efd5969bf1a10b474e018">
+        <source>Go further international and display a language selector in the header of your store so that customers can shop in their own language.</source>
+        <target>Go further international and display a language selector in the header of your store so that customers can shop in their own language.</target>
+        <note>Line: 52</note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
