--- a/translations/default/AdminDesignHelp.xlf
+++ b/translations/default/AdminDesignHelp.xlf
@@ -48,22 +48,22 @@
       <trans-unit id="48658689e18e12e430668e1f2419b0d0">
         <source>JPEG images have a small file size and standard quality. PNG images have a larger file size, a higher quality and support transparency. Note that in all cases the image files will have the .jpg extension.</source>
         <target>JPEG images have a small file size and standard quality. PNG images have a larger file size, a higher quality and support transparency. Note that in all cases the image files will have the .jpg extension.</target>
-        <note>Line: 88</note>
+        <note>Line: 224</note>
       </trans-unit>
       <trans-unit id="c031c7c1498d22082b4dcbac4fac27d4">
         <source>WARNING: This feature may not be compatible with your theme, or with some of your modules. In particular, PNG mode is not compatible with the Watermark module. If you encounter any issues, turn it off by selecting "Use JPEG".</source>
         <target>WARNING: This feature may not be compatible with your theme, or with some of your modules. In particular, PNG mode is not compatible with the Watermark module. If you encounter any issues, turn it off by selecting "Use JPEG".</target>
-        <note>Line: 89</note>
+        <note>Line: 225</note>
       </trans-unit>
       <trans-unit id="576d1a59cae85fc41c31d27433e17d37">
         <source>Ranges from 0 (worst quality, smallest file) to 100 (best quality, biggest file).</source>
         <target>Ranges from 0 (worst quality, smallest file) to 100 (best quality, biggest file).</target>
-        <note>Line: 123</note>
+        <note>Line: 204</note>
       </trans-unit>
       <trans-unit id="49caff79e5dca417b2b2c37fc7ef61af">
         <source>Recommended: 90.</source>
         <target>Recommended: 90.</target>
-        <note>Line: 106</note>
+        <note>Line: 204</note>
       </trans-unit>
       <trans-unit id="c1a1204bac358b5068446c93ec34bc87">
         <source>PNG compression is lossless: unlike JPG, you do not lose image quality with a high compression ratio. However, photographs will compress very badly.</source>
@@ -113,47 +113,47 @@
       <trans-unit id="bc10c6548185bd449a823faf9c171596">
         <source>This should be set to yes unless you successfully moved images in "Images" page under the "Preferences" menu.</source>
         <target>This should be set to yes unless you successfully moved images in "Images" page under the "Preferences" menu.</target>
-        <note>Line: 206</note>
+        <note>Line: 234</note>
       </trans-unit>
       <trans-unit id="0e10ed6e73d3301bee138a59a23c5de9">
         <source>Letters, underscores and hyphens only (e.g. "small_custom", "cart_medium", "large", "thickbox_extra-large").</source>
         <target>Letters, underscores and hyphens only (e.g. "small_custom", "cart_medium", "large", "thickbox_extra-large").</target>
-        <note>Line: 226</note>
+        <note>Line: 254</note>
       </trans-unit>
       <trans-unit id="845d4d07d4cfe4d1ccadcbab72efe199">
         <source>Maximum image width in pixels.</source>
         <target>Maximum image width in pixels.</target>
-        <note>Line: 235</note>
+        <note>Line: 263</note>
       </trans-unit>
       <trans-unit id="0afd1617fde01be0d13f62668e7ad4f1">
         <source>Maximum image height in pixels.</source>
         <target>Maximum image height in pixels.</target>
-        <note>Line: 244</note>
+        <note>Line: 272</note>
       </trans-unit>
       <trans-unit id="a61f835bd3188471923b2da2717091ec">
         <source>This type will be used for Product images.</source>
         <target>This type will be used for Product images.</target>
-        <note>Line: 252</note>
+        <note>Line: 280</note>
       </trans-unit>
       <trans-unit id="1ad8a6b5f7d9fc6ca597ad11103fab6e">
         <source>This type will be used for Category images.</source>
         <target>This type will be used for Category images.</target>
-        <note>Line: 273</note>
+        <note>Line: 301</note>
       </trans-unit>
       <trans-unit id="f193abb289c02779dabbdae3beb6e9e1">
         <source>This type will be used for Brand images.</source>
         <target>This type will be used for Brand images.</target>
-        <note>Line: 293</note>
+        <note>Line: 321</note>
       </trans-unit>
       <trans-unit id="01e1e70a11e81d8327a7a565869fb268">
         <source>This type will be used for Supplier images.</source>
         <target>This type will be used for Supplier images.</target>
-        <note>Line: 313</note>
+        <note>Line: 341</note>
       </trans-unit>
       <trans-unit id="0096ae72d90ea092533743553617e0a5">
         <source>This type will be used for Store images.</source>
         <target>This type will be used for Store images.</target>
-        <note>Line: 333</note>
+        <note>Line: 361</note>
       </trans-unit>
     </body>
   </file>
@@ -218,7 +218,8 @@
       <trans-unit id="cabfe7563d12c3e047000dc5703d9709">
         <source>Add new page category</source>
         <target>Add new page category</target>
-        <note>Line: 31</note>
+        <note>Line: 31
+Comment: Stable feature flags form</note>
       </trans-unit>
       <trans-unit id="aa6f77f824eff8e896510f1bbaf9f8e5">
         <source>Add new page</source>
