--- a/translations/default/AdminInternationalFeature.xlf
+++ b/translations/default/AdminInternationalFeature.xlf
@@ -131,55 +131,15 @@
         <target>Country options</target>
         <note>Line: 59</note>
       </trans-unit>
-      <trans-unit id="21e6a1298ab4cd040464d67a19d0f957">
-        <source>Add new country</source>
-        <target>Add new country</target>
-        <note>Line: 123</note>
-      </trans-unit>
-      <trans-unit id="790d59ef178acbc75d233bf4211763c6">
-        <source>Countries</source>
-        <target>Countries</target>
-        <note>Line: 187</note>
-      </trans-unit>
       <trans-unit id="3be0efaecb3514a14757b8beb4b5dbb3">
         <source>Country name</source>
         <target>Country name</target>
-        <note>Line: 197</note>
-      </trans-unit>
-      <trans-unit id="a4f164d8b1b72c87b8ce558827bcd423">
-        <source>Default store currency</source>
-        <target>Default store currency</target>
-        <note>Line: 231</note>
-      </trans-unit>
-      <trans-unit id="9e044dda9cf2e445c99ad749d85f277f">
-        <source>Does it need Zip/Postal code?</source>
-        <target>Does it need Zip/Postal code?</target>
-        <note>Line: 249</note>
+        <note>Line: 202</note>
       </trans-unit>
       <trans-unit id="5dbfbc352a79bf605cbe3d13c6564984">
         <source>Zip/Postal code format</source>
         <target>Zip/Postal code format</target>
-        <note>Line: 268</note>
-      </trans-unit>
-      <trans-unit id="665e1ad1c6657791cecb5b68008c7c00">
-        <source>Address format</source>
-        <target>Address format</target>
-        <note>Line: 275</note>
-      </trans-unit>
-      <trans-unit id="0bd345b58335589d4c2fa1e50ae38619">
-        <source>Contains states</source>
-        <target>Contains states</target>
-        <note>Line: 304</note>
-      </trans-unit>
-      <trans-unit id="0c750dacc725ba4047374d2efc56ce3a">
-        <source>Do you need a tax identification number?</source>
-        <target>Do you need a tax identification number?</target>
-        <note>Line: 322</note>
-      </trans-unit>
-      <trans-unit id="05820ffcf621269347a1c14d81d20b77">
-        <source>Display tax label (e.g. "Tax incl.")</source>
-        <target>Display tax label (e.g. "Tax incl.")</target>
-        <note>Line: 340</note>
+        <note>Line: 273</note>
       </trans-unit>
     </body>
   </file>
@@ -188,27 +148,22 @@
       <trans-unit id="7ec515dc1920404871d8180791d589f2">
         <source>Add a new tax rule</source>
         <target>Add a new tax rule</target>
-        <note>Line: 225</note>
+        <note>Line: 230</note>
       </trans-unit>
       <trans-unit id="b39a035a995fc6597c8eb942210d1527">
         <source>Behavior</source>
         <target>Behavior</target>
-        <note>Line: 291</note>
-      </trans-unit>
-      <trans-unit id="8d4ae51b8b5831db49a6dcde1b83e175">
-        <source>Tax Rules</source>
-        <target>Tax Rules</target>
-        <note>Line: 172</note>
+        <note>Line: 296</note>
       </trans-unit>
       <trans-unit id="af4a7a1f7975e2f67b0dbefb21a2a94d">
         <source>New tax rule</source>
         <target>New tax rule</target>
-        <note>Line: 243</note>
+        <note>Line: 248</note>
       </trans-unit>
       <trans-unit id="0d62505403d96a8d1925feae972eea16">
         <source>Zip/Postal code range</source>
         <target>Zip/Postal code range</target>
-        <note>Line: 284</note>
+        <note>Line: 289</note>
       </trans-unit>
     </body>
   </file>
@@ -227,37 +182,37 @@
       <trans-unit id="445518ee6de9f01f5203fa05e5b83236">
         <source>Themes translations</source>
         <target>Themes translations</target>
-        <note>Line: 1347</note>
+        <note>Line: 1343</note>
       </trans-unit>
       <trans-unit id="6e4fd86b4ea240672daa3c2fe1118fe0">
         <source>Expand all fieldsets</source>
         <target>Expand all fieldsets</target>
-        <note>Line: 1768</note>
+        <note>Line: 1764</note>
       </trans-unit>
       <trans-unit id="e1686cbdbfefdc838c58469866922b6c">
         <source>Close all fieldsets</source>
         <target>Close all fieldsets</target>
-        <note>Line: 1771</note>
+        <note>Line: 1767</note>
       </trans-unit>
       <trans-unit id="80ab38b942fb2da88ca496f8bbe237f7">
         <source>Email subject</source>
         <target>Email subject</target>
-        <note>Line: 2528</note>
+        <note>Line: 2519</note>
       </trans-unit>
       <trans-unit id="673a349a39148b988e9aabf651d31a96">
         <source>View HTML version</source>
         <target>View HTML version</target>
-        <note>Line: 2551</note>
+        <note>Line: 2542</note>
       </trans-unit>
       <trans-unit id="b040fe53badd6b3784735f3d102df0bd">
         <source>Edit HTML version</source>
         <target>Edit HTML version</target>
-        <note>Line: 2552</note>
+        <note>Line: 2543</note>
       </trans-unit>
       <trans-unit id="5f986174fa9cf6c0ddd927e11b68254a">
         <source>View/Edit TXT version</source>
         <target>View/Edit TXT version</target>
-        <note>Line: 2553</note>
+        <note>Line: 2544</note>
       </trans-unit>
     </body>
   </file>
@@ -352,11 +307,6 @@
         <target>Front office</target>
         <note>Line: 69</note>
       </trans-unit>
-      <trans-unit id="ce8ae9da5b7cd6c3df2929543a9af92d">
-        <source>Email</source>
-        <target>Email</target>
-        <note>Line: 70</note>
-      </trans-unit>
       <trans-unit id="6311ae17c1ee52b36e68aaf4ad066387">
         <source>Other</source>
         <target>Other</target>
@@ -369,12 +319,12 @@
       <trans-unit id="ad68f9bafd9bf2dcf3865dac55662fd5">
         <source>ISO code</source>
         <target>ISO code</target>
-        <note>Line: 102</note>
+        <note>Line: 101</note>
       </trans-unit>
       <trans-unit id="d8ec51bf63378409b1d40cc45c80f926">
         <source>Call prefix</source>
         <target>Call prefix</target>
-        <note>Line: 109</note>
+        <note>Line: 108</note>
       </trans-unit>
     </body>
   </file>
@@ -384,6 +334,20 @@
         <source>Symbol</source>
         <target>Symbol</target>
         <note>Line: 203</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/Core/Grid/Definition/Factory/CustomerThreadGridDefinitionFactory.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="ce8ae9da5b7cd6c3df2929543a9af92d">
+        <source>Email</source>
+        <target>Email</target>
+        <note>Line: 135</note>
+      </trans-unit>
+      <trans-unit id="a1fa27779242b4902f7ae3bdd5c6d508">
+        <source>Type</source>
+        <target>Type</target>
+        <note>Line: 142</note>
       </trans-unit>
     </body>
   </file>
@@ -425,22 +389,31 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Controller/Admin/Improve/International/CountryController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="21e6a1298ab4cd040464d67a19d0f957">
+        <source>Add new country</source>
+        <target>Add new country</target>
+        <note>Line: 131</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Controller/Admin/Improve/International/CurrencyController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="586e27d3575f00e51ad43b66eb34e49f">
         <source>Currency name</source>
         <target>Currency name</target>
-        <note>Line: 574</note>
+        <note>Line: 575</note>
       </trans-unit>
       <trans-unit id="3be3001725eece62c9121b4d82c00d53">
         <source>Cannot find reference data for currency %isoCode%</source>
         <target>Cannot find reference data for currency %isoCode%</target>
-        <note>Line: 301</note>
+        <note>Line: 302</note>
       </trans-unit>
       <trans-unit id="462fdc88328b3c9d31c63fa01b4f00b1">
         <source>Numeric ISO code</source>
         <target>Numeric ISO code</target>
-        <note>Line: 560</note>
+        <note>Line: 561</note>
       </trans-unit>
     </body>
   </file>
@@ -449,7 +422,7 @@
       <trans-unit id="71777469a202cba33a8985f7d5bf1d97">
         <source>Add new state</source>
         <target>Add new state</target>
-        <note>Line: 302</note>
+        <note>Line: 357</note>
       </trans-unit>
     </body>
   </file>
@@ -458,7 +431,7 @@
       <trans-unit id="e7c7216c46ae0e04e2012a2137803cca">
         <source>Add new tax rules group</source>
         <target>Add new tax rules group</target>
-        <note>Line: 288</note>
+        <note>Line: 333</note>
       </trans-unit>
     </body>
   </file>
@@ -563,11 +536,6 @@
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Localization/ImportLocalizationPackType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="b8464cdd84b5f068ad72bf5c4f32163d">
-        <source>States</source>
-        <target>States</target>
-        <note>Line: 118</note>
-      </trans-unit>
       <trans-unit id="75f9936f4fef50cf05561217a24f058c">
         <source>Localization pack you want to import</source>
         <target>Localization pack you want to import</target>
@@ -650,6 +618,45 @@
         <source>Time zone</source>
         <target>Time zone</target>
         <note>Line: 160</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Locations/CountryType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="a4f164d8b1b72c87b8ce558827bcd423">
+        <source>Default store currency</source>
+        <target>Default store currency</target>
+        <note>Line: 126</note>
+      </trans-unit>
+      <trans-unit id="9e044dda9cf2e445c99ad749d85f277f">
+        <source>Does it need Zip/Postal code?</source>
+        <target>Does it need Zip/Postal code?</target>
+        <note>Line: 141</note>
+      </trans-unit>
+      <trans-unit id="665e1ad1c6657791cecb5b68008c7c00">
+        <source>Address format</source>
+        <target>Address format</target>
+        <note>Line: 156</note>
+      </trans-unit>
+      <trans-unit id="0bd345b58335589d4c2fa1e50ae38619">
+        <source>Contains states</source>
+        <target>Contains states</target>
+        <note>Line: 164</note>
+      </trans-unit>
+      <trans-unit id="0c750dacc725ba4047374d2efc56ce3a">
+        <source>Do you need a tax identification number?</source>
+        <target>Do you need a tax identification number?</target>
+        <note>Line: 168</note>
+      </trans-unit>
+      <trans-unit id="05820ffcf621269347a1c14d81d20b77">
+        <source>Display tax label (e.g. "Tax incl.")</source>
+        <target>Display tax label (e.g. "Tax incl.")</target>
+        <note>Line: 172</note>
+      </trans-unit>
+      <trans-unit id="a7e03be50fa5fe9c73ec78f96574278f">
+        <source> Zip/Postal code format</source>
+        <target>Zip/Postal code format</target>
+        <note>Line: 145</note>
       </trans-unit>
     </body>
   </file>
@@ -781,6 +788,15 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/Country/Blocks/form.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="790d59ef178acbc75d233bf4211763c6">
+        <source>Countries</source>
+        <target>Countries</target>
+        <note>Line: 31</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/Currency/Blocks/exchange_rates.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="e75e316ab3a0a8c0c5fc4b48d1a7033f">
@@ -852,6 +868,11 @@
         <target>Please wait while currency data is being loaded</target>
         <note>Line: 118</note>
       </trans-unit>
+      <trans-unit id="7c92376882a1b08d3f07b37b5ce500d3">
+        <source>{price}</source>
+        <target>{price}</target>
+        <note>Line: 46</note>
+      </trans-unit>
     </body>
   </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/Currency/index.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
@@ -859,7 +880,8 @@
       <trans-unit id="076b68505282c6c0654708db343d6673">
         <source>Add new currency</source>
         <target>Add new currency</target>
-        <note>Line: 31</note>
+        <note>Line: 31
+Comment: Stable feature flags form</note>
       </trans-unit>
     </body>
   </file>
@@ -917,6 +939,15 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/Locations/State/Blocks/form.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="b8464cdd84b5f068ad72bf5c4f32163d">
+        <source>States</source>
+        <target>States</target>
+        <note>Line: 33</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/Tax/Blocks/tax_options.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="1c669d037f8bc785f0e1a9aeb7070367">
@@ -932,6 +963,15 @@
         <source>Add new tax</source>
         <target>Add new tax</target>
         <note>Line: 29</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Resources/views/Admin/Improve/International/TaxRulesGroup/Blocks/form.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="8d4ae51b8b5831db49a6dcde1b83e175">
+        <source>Tax Rules</source>
+        <target>Tax Rules</target>
+        <note>Line: 32</note>
       </trans-unit>
     </body>
   </file>
