--- a/translations/default/AdminInternationalHelp.xlf
+++ b/translations/default/AdminInternationalHelp.xlf
@@ -111,66 +111,22 @@
       <trans-unit id="b33aadd6763bfea56853a7ecf2176382">
         <source>Two -- or three -- letter ISO code (e.g. "us" for United States).</source>
         <target>Two -- or three -- letter ISO code (e.g. "us" for United States).</target>
-        <note>Line: 206</note>
+        <note>Line: 211</note>
       </trans-unit>
       <trans-unit id="cd2f7b9409e0f1527766ad35aa8bd3c5">
         <source>International call prefix, (e.g. 1 for United States).</source>
         <target>International call prefix, (e.g. 1 for United States).</target>
-        <note>Line: 220</note>
+        <note>Line: 225</note>
       </trans-unit>
       <trans-unit id="92de0162cbdfa60f671ba3cad1d392a1">
         <source>Geographical region.</source>
         <target>Geographical region.</target>
-        <note>Line: 245</note>
-      </trans-unit>
-      <trans-unit id="98ae2fd635525d30d2b0e8b643f9a23c">
-        <source>Indicate the format of the postal code: use L for a letter, N for a number, and C for the country's ISO 3166-1 alpha-2 code. For example, NNNNN for the United States, France, Poland and many other; LNNNNLLL for Argentina, etc. If you do not want PrestaShop to verify the postal code for this country, leave it blank.</source>
-        <target>Indicate the format of the postal code: use L for a letter, N for a number, and C for the country's ISO 3166-1 alpha-2 code. For example, NNNNN for the United States, France, Poland and many other; LNNNNLLL for Argentina, etc. If you do not want PrestaShop to verify the postal code for this country, leave it blank.</target>
-        <note>Line: 271</note>
+        <note>Line: 250</note>
       </trans-unit>
       <trans-unit id="a2ddbdfb29a0708bd711601f9277435c">
         <source>Display this country to your customers (the selected country will always be displayed in the Back Office).</source>
         <target>Display this country to your customers (the selected country will always be displayed in the Back Office).</target>
-        <note>Line: 300</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="controllers/admin/AdminStatesController.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="b6ff06f41cb66b5b89be6a3670e40d63">
-        <source>Provide the state name to be displayed in addresses and on invoices.</source>
-        <target>Provide the state name to be displayed in addresses and on invoices.</target>
-        <note>Line: 155</note>
-      </trans-unit>
-      <trans-unit id="473d5a5e7a18ca5e30b399ae0dfda18e">
-        <source>1 to 4 letter ISO code.</source>
-        <target>1 to 4 letter ISO code.</target>
-        <note>Line: 164</note>
-      </trans-unit>
-      <trans-unit id="d44080730b4d80fb65b9018d57c058b3">
-        <source>You can prefix it with the country ISO code if needed.</source>
-        <target>You can prefix it with the country ISO code if needed.</target>
-        <note>Line: 164</note>
-      </trans-unit>
-      <trans-unit id="0f6ca10753a64573af4ae286c7421e62">
-        <source>Country where the state is located.</source>
-        <target>Country where the state is located.</target>
-        <note>Line: 177</note>
-      </trans-unit>
-      <trans-unit id="68240d02aad03eed41bc52305688a035">
-        <source>Only the countries with the option "contains states" enabled are displayed.</source>
-        <target>Only the countries with the option "contains states" enabled are displayed.</target>
-        <note>Line: 177</note>
-      </trans-unit>
-      <trans-unit id="15c5d5dd58a9e70b8b86a7447dd00f70">
-        <source>Geographical region where this state is located.</source>
-        <target>Geographical region where this state is located.</target>
-        <note>Line: 190</note>
-      </trans-unit>
-      <trans-unit id="ec92dbe75bbcc2fbf4cad6302df97c19">
-        <source>Used for shipping</source>
-        <target>Used for shipping</target>
-        <note>Line: 191</note>
+        <note>Line: 305</note>
       </trans-unit>
     </body>
   </file>
@@ -179,32 +135,32 @@
       <trans-unit id="e14eeddb992a1fa103cb2669178369cf">
         <source>You can define a range of Zip/Postal codes (e.g., 75000-75015) or simply use one Zip/Postal code.</source>
         <target>You can define a range of Zip/Postal codes (e.g., 75000-75015) or simply use one Zip/Postal code.</target>
-        <note>Line: 287</note>
+        <note>Line: 292</note>
       </trans-unit>
       <trans-unit id="ce9c5fc1032ac5aa03a3d248022773df">
         <source>You must define the behavior if an address matches multiple rules:</source>
         <target>You must define the behavior if an address matches multiple rules:</target>
-        <note>Line: 313</note>
+        <note>Line: 318</note>
       </trans-unit>
       <trans-unit id="439fa6ce423495b01ffd31ea56b33335">
         <source>- This tax only: Will apply only this tax</source>
         <target>- This tax only: Will apply only this tax</target>
-        <note>Line: 314</note>
+        <note>Line: 319</note>
       </trans-unit>
       <trans-unit id="4019ba4535164cd55c61ac20379a8aa9">
         <source>- Combine: Combine taxes (e.g.: 10% + 5% = 15%)</source>
         <target>- Combine: Combine taxes (e.g.: 10% + 5% = 15%)</target>
-        <note>Line: 315</note>
+        <note>Line: 320</note>
       </trans-unit>
       <trans-unit id="dabf677c95d59c749ea5d6d6d22012c4">
         <source><![CDATA[- One after another: Apply taxes one after another (e.g.: 100 + 10% => 110 + 5% = 115.5)]]></source>
         <target><![CDATA[- One after another: Apply taxes one after another (e.g.: 100 + 10% => 110 + 5% = 115.5)]]></target>
-        <note>Line: 316</note>
+        <note>Line: 321</note>
       </trans-unit>
       <trans-unit id="7475ec0d41372a307c497acb7eeea8c4">
         <source>No Tax</source>
         <target>No Tax</target>
-        <note>Line: 330</note>
+        <note>Line: 335</note>
       </trans-unit>
       <trans-unit id="7a3ded393734410a3d3514e10b672c92">
         <source>(Total tax: 9%)</source>
@@ -224,6 +180,11 @@
         <source>ISO 4217 code (e.g. USD for Dollars, EUR for Euros, etc.)</source>
         <target>ISO 4217 code (e.g. USD for Dollars, EUR for Euros, etc.)</target>
         <note>Line: 173</note>
+      </trans-unit>
+      <trans-unit id="c7c838899b96b2b17ea954d2578cf541">
+        <source>Exchange rates are calculated from one unit of your shop's default currency. For example, if the default currency is euros and your chosen currency is dollars, type "1.20" (1€ = $1.20).</source>
+        <target>Exchange rates are calculated from one unit of your shop's default currency. For example, if the default currency is euros and your chosen currency is dollars, type "1.20" (1€ = $1.20).</target>
+        <note>Line: 197</note>
       </trans-unit>
       <trans-unit id="0ab7db7a10b7efc8270dd215c2a4ada7">
         <source><![CDATA[Exchange rates are calculated from one unit of your shop's default currency. For example, if the default currency is euros and your chosen currency is dollars, type "1.20" (1€ = $1.20).]]></source>
@@ -363,6 +324,54 @@
         <source>The default currency used in your shop.</source>
         <target>The default currency used in your shop.</target>
         <note>Line: 149</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Locations/CountryType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="98ae2fd635525d30d2b0e8b643f9a23c">
+        <source>Indicate the format of the postal code: use L for a letter, N for a number, and C for the country's ISO 3166-1 alpha-2 code. For example, NNNNN for the United States, France, Poland and many other; LNNNNLLL for Argentina, etc. If you do not want PrestaShop to verify the postal code for this country, leave it blank.</source>
+        <target>Indicate the format of the postal code: use L for a letter, N for a number, and C for the country's ISO 3166-1 alpha-2 code. For example, NNNNN for the United States, France, Poland and many other; LNNNNLLL for Argentina, etc. If you do not want PrestaShop to verify the postal code for this country, leave it blank.</target>
+        <note>Line: 146</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Improve/International/Locations/StateType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="b6ff06f41cb66b5b89be6a3670e40d63">
+        <source>Provide the state name to be displayed in addresses and on invoices.</source>
+        <target>Provide the state name to be displayed in addresses and on invoices.</target>
+        <note>Line: 92</note>
+      </trans-unit>
+      <trans-unit id="473d5a5e7a18ca5e30b399ae0dfda18e">
+        <source>1 to 4 letter ISO code.</source>
+        <target>1 to 4 letter ISO code.</target>
+        <note>Line: 118</note>
+      </trans-unit>
+      <trans-unit id="d44080730b4d80fb65b9018d57c058b3">
+        <source>You can prefix it with the country ISO code if needed.</source>
+        <target>You can prefix it with the country ISO code if needed.</target>
+        <note>Line: 120</note>
+      </trans-unit>
+      <trans-unit id="0f6ca10753a64573af4ae286c7421e62">
+        <source>Country where the state is located.</source>
+        <target>Country where the state is located.</target>
+        <note>Line: 148</note>
+      </trans-unit>
+      <trans-unit id="68240d02aad03eed41bc52305688a035">
+        <source>Only the countries with the option "contains states" enabled are displayed.</source>
+        <target>Only the countries with the option "contains states" enabled are displayed.</target>
+        <note>Line: 150</note>
+      </trans-unit>
+      <trans-unit id="15c5d5dd58a9e70b8b86a7447dd00f70">
+        <source>Geographical region where this state is located.</source>
+        <target>Geographical region where this state is located.</target>
+        <note>Line: 163</note>
+      </trans-unit>
+      <trans-unit id="ec92dbe75bbcc2fbf4cad6302df97c19">
+        <source>Used for shipping</source>
+        <target>Used for shipping</target>
+        <note>Line: 165</note>
       </trans-unit>
     </body>
   </file>
