--- a/translations/default/AdminInternationalNotification.xlf
+++ b/translations/default/AdminInternationalNotification.xlf
@@ -210,12 +210,12 @@ Comment: @todo Throw exception</note>
       <trans-unit id="bb01c8c21884e974df8517110c92b22a">
         <source>The translation was added successfully, but the language has not been created.</source>
         <target>The translation was added successfully, but the language has not been created.</target>
-        <note>Line: 511</note>
+        <note>Line: 513</note>
       </trans-unit>
       <trans-unit id="ae99f365ee39176c3ab50b76a95cf629">
         <source>Cannot add configuration %1$s for %2$s language</source>
         <target>Cannot add configuration %1$s for %2$s language</target>
-        <note>Line: 1576</note>
+        <note>Line: 1578</note>
       </trans-unit>
     </body>
   </file>
@@ -238,7 +238,7 @@ Comment: @todo Throw exception</note>
       <trans-unit id="6f3455d187a23443796efdcbe044096b">
         <source>No tax</source>
         <target>No tax</target>
-        <note>Line: 161</note>
+        <note>Line: 169</note>
       </trans-unit>
     </body>
   </file>
@@ -247,12 +247,12 @@ Comment: @todo Throw exception</note>
       <trans-unit id="e07a23e507642ef04f449a7a78f59d38">
         <source>This ISO code already exists.You cannot create two countries with the same ISO code.</source>
         <target>This ISO code already exists.You cannot create two countries with the same ISO code.</target>
-        <note>Line: 410</note>
+        <note>Line: 415</note>
       </trans-unit>
       <trans-unit id="28064049c0d480c2fdeafd456977da8d">
         <source>Invalid address layout %s</source>
         <target>Invalid address layout %s</target>
-        <note>Line: 445</note>
+        <note>Line: 450</note>
       </trans-unit>
     </body>
   </file>
@@ -275,17 +275,17 @@ Comment: @todo Throw exception</note>
       <trans-unit id="45f3b37902e09b041709484fd75cab22">
         <source>A tax rule already exists for this country/state with tax only behavior.</source>
         <target>A tax rule already exists for this country/state with tax only behavior.</target>
-        <note>Line: 435</note>
+        <note>Line: 439</note>
       </trans-unit>
       <trans-unit id="5ac89fc5da40fe9d8b89254fb30a0945">
         <source>The Zip/Postal code is invalid. It must be typed as follows: %format% for %country%.</source>
         <target>The Zip/Postal code is invalid. It must be typed as follows: %format% for %country%.</target>
-        <note>Line: 463</note>
+        <note>Line: 467</note>
       </trans-unit>
       <trans-unit id="2ff5095fd8289ccdaeca9c5e7d379fd2">
         <source>An error has occurred: Cannot save the current tax rule.</source>
         <target>An error has occurred: Cannot save the current tax rule.</target>
-        <note>Line: 489</note>
+        <note>Line: 493</note>
       </trans-unit>
     </body>
   </file>
@@ -294,137 +294,137 @@ Comment: @todo Throw exception</note>
       <trans-unit id="b5f3291b6db7481e8ca0da4a00718cf9">
         <source>Impossible to create the directory "%folder%".</source>
         <target>Impossible to create the directory "%folder%".</target>
-        <note>Line: 441</note>
+        <note>Line: 437</note>
       </trans-unit>
       <trans-unit id="ec531fd2b656df91f11e8f94b2bd2f9b">
         <source>An error occurred while creating archive.</source>
         <target>An error occurred while creating archive.</target>
-        <note>Line: 560</note>
+        <note>Line: 556</note>
       </trans-unit>
       <trans-unit id="b10dfa68dec5e313508a4a55eedae7d1">
         <source>Please select a language and a theme.</source>
         <target>Please select a language and a theme.</target>
-        <note>Line: 562</note>
+        <note>Line: 558</note>
       </trans-unit>
       <trans-unit id="02ae08296d544eb7c674182122645631">
         <source>Tab "%s" is not valid</source>
         <target>Tab "%s" is not valid</target>
-        <note>Line: 723</note>
+        <note>Line: 719</note>
       </trans-unit>
       <trans-unit id="737b7d8e0108e60b272f6e5a0eaf6ef2">
         <source>Validation failed for: %file%</source>
         <target>Validation failed for: %file%</target>
-        <note>Line: 807</note>
+        <note>Line: 803</note>
       </trans-unit>
       <trans-unit id="e7e5ca2e62158b89d7583ac6936830a5">
         <source>Unidentified file found: %file%</source>
         <target>Unidentified file found: %file%</target>
-        <note>Line: 810</note>
+        <note>Line: 806</note>
       </trans-unit>
       <trans-unit id="9831c9e35b4d39d939363aa5629e00f2">
         <source>The archive cannot be extracted.</source>
         <target>The archive cannot be extracted.</target>
-        <note>Line: 866</note>
+        <note>Line: 862</note>
       </trans-unit>
       <trans-unit id="6f2981f3239ff532c94509a6f98e11c3">
         <source>ISO CODE invalid "%iso_code%" for the following file: "%file%"</source>
         <target>ISO CODE invalid "%iso_code%" for the following file: "%file%"</target>
-        <note>Line: 869</note>
+        <note>Line: 865</note>
       </trans-unit>
       <trans-unit id="299dd7d59920216689a1749def7fd939">
         <source>Cannot write to the theme's language file (%s). Please check writing permissions.</source>
         <target>Cannot write to the theme's language file (%s). Please check writing permissions.</target>
-        <note>Line: 976</note>
+        <note>Line: 972</note>
       </trans-unit>
       <trans-unit id="78973deca6d26ce225f6f66c6c30dd54">
         <source>Invalid theme "%theme%"</source>
         <target>Invalid theme "%theme%"</target>
-        <note>Line: 1815</note>
+        <note>Line: 1811</note>
       </trans-unit>
       <trans-unit id="7d65d1400b9d08c5c638682170ff4d7c">
         <source>Invalid iso code "%iso_code%"</source>
         <target>Invalid iso code "%iso_code%"</target>
-        <note>Line: 1425</note>
+        <note>Line: 1421</note>
       </trans-unit>
       <trans-unit id="b399fb01ee4e0a8ec1681fb9bcb31ce0">
         <source>This %type_content% file extension is not accepted.</source>
         <target>This %type_content% file extension is not accepted.</target>
-        <note>Line: 1658</note>
+        <note>Line: 1654</note>
       </trans-unit>
       <trans-unit id="1e5ec3cd42b5bac1b06b99f67cba41dd">
         <source>Invalid module name "%module%"</source>
         <target>Invalid module name "%module%"</target>
-        <note>Line: 1667</note>
+        <note>Line: 1663</note>
       </trans-unit>
       <trans-unit id="c68e9fe9015c5779289f32e2bdef0a7b">
         <source>Invalid mail name "%mail%"</source>
         <target>Invalid mail name "%mail%"</target>
-        <note>Line: 1671</note>
+        <note>Line: 1667</note>
       </trans-unit>
       <trans-unit id="40f5c232e433d178a4f912b3092d7df1">
         <source>Directory "%folder%" cannot be created</source>
         <target>Directory "%folder%" cannot be created</target>
-        <note>Line: 1688</note>
+        <note>Line: 1684</note>
       </trans-unit>
       <trans-unit id="ccdf1aa6f4cb029f9846e53006115905">
         <source>Your email translations contain some invalid HTML and cannot be saved. Please check your content.</source>
         <target>Your email translations contain some invalid HTML and cannot be saved. Please check your content.</target>
-        <note>Line: 1694</note>
+        <note>Line: 1690</note>
       </trans-unit>
       <trans-unit id="f1c030f2fd8f1b382a4bffd04af59c2d">
         <source>Your HTML email templates cannot contain JavaScript code.</source>
         <target>Your HTML email templates cannot contain JavaScript code.</target>
-        <note>Line: 1700</note>
+        <note>Line: 1696</note>
       </trans-unit>
       <trans-unit id="5dc4babbd10d00e89d8e46a12942d394">
         <source>Empty string found, please edit: "%file%"</source>
         <target>Empty string found, please edit: "%file%"</target>
-        <note>Line: 1846</note>
+        <note>Line: 1842</note>
       </trans-unit>
       <trans-unit id="f2aca97fb94315864fd2fa52f3100f1e">
         <source>There is an error in template, an empty string has been found. Please edit: "%file%"</source>
         <target>There is an error in template, an empty string has been found. Please edit: "%file%"</target>
-        <note>Line: 2118</note>
+        <note>Line: 2114</note>
       </trans-unit>
       <trans-unit id="616d8e7e6c0dc755a7e932c4db698317">
         <source>The module directory must be writable.</source>
         <target>The module directory must be writable.</target>
-        <note>Line: 2181</note>
+        <note>Line: 2177</note>
       </trans-unit>
       <trans-unit id="1078d7e980a5a2fe78762cafd8480f0a">
         <source>A mail directory exists for the "%iso_code%" language, but not for the default language (%language%) in %folder%</source>
         <target>A mail directory exists for the "%iso_code%" language, but not for the default language (%language%) in %folder%</target>
-        <note>Line: 2445</note>
+        <note>Line: 2436</note>
       </trans-unit>
       <trans-unit id="7cf50c9ffecf05f3befc1134eba0ef45">
         <source>missing translation(s)</source>
         <target>missing translation(s)</target>
-        <note>Line: 2507</note>
+        <note>Line: 2498</note>
       </trans-unit>
       <trans-unit id="fda679a1f72b8a9676b6926a81c5e139">
         <source>No Subject was found for %mail_name% in the database.</source>
         <target>No Subject was found for %mail_name% in the database.</target>
-        <note>Line: 2546</note>
+        <note>Line: 2537</note>
       </trans-unit>
       <trans-unit id="a662aa2e6538df75742383c7db8f3bd5">
         <source>There was a problem getting the mail files.</source>
         <target>There was a problem getting the mail files.</target>
-        <note>Line: 2583</note>
+        <note>Line: 2574</note>
       </trans-unit>
       <trans-unit id="3eefb74a46023e6c9152c92803750f2b">
         <source>English language files must exist in %folder% folder</source>
         <target>English language files must exist in %folder% folder</target>
-        <note>Line: 2584</note>
+        <note>Line: 2575</note>
       </trans-unit>
       <trans-unit id="c4c005678d26a593268006bc4a44c179">
         <source>Cannot write language file for email subjects. Path is: %folder%</source>
         <target>Cannot write language file for email subjects. Path is: %folder%</target>
-        <note>Line: 2982</note>
+        <note>Line: 2973</note>
       </trans-unit>
       <trans-unit id="05b17ff64944116b14a3ec88f2080a5e">
         <source>Cannot write into the "%file%"</source>
         <target>Cannot write into the "%file%"</target>
-        <note>Line: 3184</note>
+        <note>Line: 3175</note>
       </trans-unit>
     </body>
   </file>
@@ -500,32 +500,32 @@ Comment: @todo Throw exception</note>
       <trans-unit id="9289665482a13fc74be054caef49b63e">
         <source>This currency already exists.</source>
         <target>This currency already exists.</target>
-        <note>Line: 578</note>
+        <note>Line: 579</note>
       </trans-unit>
       <trans-unit id="0bb1c64dda8dcd3473e0eee6c06c8a4e">
         <source>%currency% is the default currency for shop %shop_name%, and therefore cannot be removed from shop association</source>
         <target>%currency% is the default currency for shop %shop_name%, and therefore cannot be removed from shop association</target>
-        <note>Line: 592</note>
+        <note>Line: 593</note>
       </trans-unit>
       <trans-unit id="d51f13fb7e04f0002b08f14370e565a9">
         <source>%currency% is the default currency for shop %shop_name%, and therefore cannot be disabled</source>
         <target>%currency% is the default currency for shop %shop_name%, and therefore cannot be disabled</target>
-        <note>Line: 600</note>
+        <note>Line: 601</note>
       </trans-unit>
       <trans-unit id="8246d0c794e7db090587c4797b2a234f">
         <source>You cannot delete the default currency</source>
         <target>You cannot delete the default currency</target>
-        <note>Line: 617</note>
+        <note>Line: 618</note>
       </trans-unit>
       <trans-unit id="7c77e53206853cb381e91e037554faa3">
         <source>You cannot disable the default currency</source>
         <target>You cannot disable the default currency</target>
-        <note>Line: 621</note>
+        <note>Line: 622</note>
       </trans-unit>
       <trans-unit id="32308f335c5aca97078cb283ce88f9d3">
         <source>Oops... it looks like this ISO code already exists. If you are: [1][2]trying to create an alternative currency, you must type a different ISO code[/2][2]trying to modify the currency with ISO code %isoCode%, make sure you did not check the creation box[/2][/1]</source>
         <target>Oops... it looks like this ISO code already exists. If you are: [1][2]trying to create an alternative currency, you must type a different ISO code[/2][2]trying to modify the currency with ISO code %isoCode%, make sure you did not check the creation box[/2][/1]</target>
-        <note>Line: 625</note>
+        <note>Line: 626</note>
       </trans-unit>
     </body>
   </file>
@@ -534,37 +534,37 @@ Comment: @todo Throw exception</note>
       <trans-unit id="2f236f9450ce8714611e468181064659">
         <source>You cannot change the status of the default language.</source>
         <target>You cannot change the status of the default language.</target>
-        <note>Line: 399</note>
+        <note>Line: 400</note>
       </trans-unit>
       <trans-unit id="8037670f9e6df1f09e040ff8ab047fac">
         <source>An error occurred while copying "No Picture" image to your product folder.</source>
         <target>An error occurred while copying "No Picture" image to your product folder.</target>
-        <note>Line: 351</note>
+        <note>Line: 352</note>
       </trans-unit>
       <trans-unit id="0773497a933e6c2b618678b02cbdf7a1">
         <source>An error occurred while copying "No picture" image to your category folder.</source>
         <target>An error occurred while copying "No picture" image to your category folder.</target>
-        <note>Line: 355</note>
+        <note>Line: 356</note>
       </trans-unit>
       <trans-unit id="6509c8bfa3f06725a6016e6a429dbcd9">
         <source>An error occurred while copying "No picture" image to your brand folder.</source>
         <target>An error occurred while copying "No picture" image to your brand folder.</target>
-        <note>Line: 359</note>
+        <note>Line: 360</note>
       </trans-unit>
       <trans-unit id="59382adebc7f0d65c42fe773d443e4c7">
         <source>This ISO code is already linked to another language.</source>
         <target>This ISO code is already linked to another language.</target>
-        <note>Line: 385</note>
+        <note>Line: 386</note>
       </trans-unit>
       <trans-unit id="8bd94436fa6738863292fb9823368694">
         <source>You cannot delete the default language.</source>
         <target>You cannot delete the default language.</target>
-        <note>Line: 403</note>
+        <note>Line: 404</note>
       </trans-unit>
       <trans-unit id="f25eedbf89efbd0cfce488fe01f9c4cb">
         <source>You cannot delete the language currently in use. Please select a different language.</source>
         <target>You cannot delete the language currently in use. Please select a different language.</target>
-        <note>Line: 407</note>
+        <note>Line: 408</note>
       </trans-unit>
     </body>
   </file>
@@ -612,6 +612,35 @@ Comment: @todo Throw exception</note>
         <source>An error occurred while editing the zone.</source>
         <target>An error occurred while editing the zone.</target>
         <note>Line: 327</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Controller/Admin/Sell/CustomerService/CustomerThreadController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="6ab32eeb62bb6622e62e31dbaadce9ac">
+        <source>This customer thread does not exists</source>
+        <target>This customer thread does not exists</target>
+        <note>Line: 371</note>
+      </trans-unit>
+      <trans-unit id="96ed9617443ef466a3531211812dbaf9">
+        <source>Cannot delete this customer thread</source>
+        <target>Cannot delete this customer thread</target>
+        <note>Line: 375</note>
+      </trans-unit>
+      <trans-unit id="2e7dbc174aec75b4646c0202ddd59efc">
+        <source>Failed to add customer message</source>
+        <target>Failed to add customer message</target>
+        <note>Line: 380</note>
+      </trans-unit>
+      <trans-unit id="6dde1c732463fcd838279bc52039a61d">
+        <source>Failed to update customer thread status</source>
+        <target>Failed to update customer thread status</target>
+        <note>Line: 384</note>
+      </trans-unit>
+      <trans-unit id="68e16eaed34511b3b671fb40ee12d01c">
+        <source>Comment is not valid</source>
+        <target>Comment is not valid</target>
+        <note>Line: 388</note>
       </trans-unit>
     </body>
   </file>
