--- a/translations/default/AdminNavigationNotification.xlf
+++ b/translations/default/AdminNavigationNotification.xlf
@@ -5,17 +5,17 @@
       <trans-unit id="91a52a2a855d5abd5597a481c20f3972">
         <source>No new order for now :(</source>
         <target>No new order for now :(</target>
-        <note>Line: 319</note>
+        <note>Line: 339</note>
       </trans-unit>
       <trans-unit id="235a11509f6bd6143ddf165affbf7dad">
         <source>No new customer for now :(</source>
         <target>No new customer for now :(</target>
-        <note>Line: 329</note>
+        <note>Line: 349</note>
       </trans-unit>
       <trans-unit id="b7c3bb1b80422ee7587d604b1a97ce3c">
         <source>No new message for now.</source>
         <target>No new message for now.</target>
-        <note>Line: 339</note>
+        <note>Line: 359</note>
       </trans-unit>
       <trans-unit id="a2b8ed9c305b8ea86116b603cca78a97">
         <source>registered</source>
@@ -25,12 +25,12 @@
       <trans-unit id="c821206b336b401bccf058f664f8255d">
         <source>Your shop is in debug mode.</source>
         <target>Your shop is in debug mode.</target>
-        <note>Line: 229</note>
+        <note>Line: 231</note>
       </trans-unit>
       <trans-unit id="13886bc255a80b7c11e0585013feeb30">
         <source>All the PHP errors and messages are displayed. When you no longer need it, [1]turn off[/1] this mode.</source>
         <target>All the PHP errors and messages are displayed. When you no longer need it, [1]turn off[/1] this mode.</target>
-        <note>Line: 229</note>
+        <note>Line: 231</note>
       </trans-unit>
       <trans-unit id="67a33d40bef41c3b79d6b973bfcbc89a">
         <source>Your shop is in maintenance.</source>
@@ -41,6 +41,26 @@
         <source><![CDATA[Your visitors and customers cannot access your shop while in maintenance mode.%s To manage the maintenance settings, go to Shop Parameters > Maintenance tab.]]></source>
         <target><![CDATA[Your visitors and customers cannot access your shop while in maintenance mode.%s To manage the maintenance settings, go to Shop Parameters > Maintenance tab.]]></target>
         <note>Line: 245</note>
+      </trans-unit>
+      <trans-unit id="b0ba9e87fe502f010c233334e4159f29">
+        <source>Your store is in maintenance mode.</source>
+        <target>Your store is in maintenance mode.</target>
+        <note>Line: 243</note>
+      </trans-unit>
+      <trans-unit id="d62981b15048763100760d7e58f8722e">
+        <source><![CDATA[To manage the maintenance settings, go to Shop Parameters > Maintenance tab.]]></source>
+        <target><![CDATA[To manage the maintenance settings, go to Shop Parameters > Maintenance tab.]]></target>
+        <note>Line: 249</note>
+      </trans-unit>
+      <trans-unit id="a69e9340de5fd491580e9bb528b36424">
+        <source>Admins can access the store front office without storing their IP.</source>
+        <target>Admins can access the store front office without storing their IP.</target>
+        <note>Line: 253</note>
+      </trans-unit>
+      <trans-unit id="672d0c62dfc352f75e3a3f6b87c5cb38">
+        <source>Your visitors and customers cannot access your store while in maintenance mode.</source>
+        <target>Your visitors and customers cannot access your store while in maintenance mode.</target>
+        <note>Line: 246</note>
       </trans-unit>
     </body>
   </file>
@@ -68,6 +88,15 @@
       </trans-unit>
     </body>
   </file>
+  <file original="admin-dev/themes/new-theme/template/layout.tpl" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="383eff5d299bf8ebb314ff4235ed2de3">
+        <source>Your visitors and customers cannot access your shop while in maintenance mode.</source>
+        <target>Your visitors and customers cannot access your shop while in maintenance mode.</target>
+        <note>Line: 62</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="controllers/admin/AdminQuickAccessesController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="c059561b30601ffaf8759ae84f2b44b9">
@@ -87,17 +116,17 @@
       <trans-unit id="7c56f525288d680c6efa0c2d07d79d13">
         <source>Have you checked your [1][2]abandoned carts[/2][/1]?[3]Your next order could be hiding there!</source>
         <target>Have you checked your [1][2]abandoned carts[/2][/1]?[3]Your next order could be hiding there!</target>
-        <note>Line: 236</note>
+        <note>Line: 225</note>
       </trans-unit>
       <trans-unit id="70821661a53b31c40fdd6c9f3bbff741">
         <source>Are you active on social media these days?</source>
         <target>Are you active on social media these days?</target>
-        <note>Line: 248</note>
+        <note>Line: 237</note>
       </trans-unit>
       <trans-unit id="b5ffb1ab1fe4ad00831c65b8dab60c0c">
         <source>Seems like all your customers are happy :)</source>
         <target>Seems like all your customers are happy :)</target>
-        <note>Line: 251</note>
+        <note>Line: 240</note>
       </trans-unit>
     </body>
   </file>
