--- a/translations/default/AdminNotificationsInfo.xlf
+++ b/translations/default/AdminNotificationsInfo.xlf
@@ -24,7 +24,7 @@
       <trans-unit id="1412292b09d3cd39f32549afb1f5f102">
         <source>Delete selected item?</source>
         <target>Delete selected item?</target>
-        <note>Line: 683</note>
+        <note>Line: 688</note>
       </trans-unit>
       <trans-unit id="e25f0ecd41211b01c83e5fec41df4fe7">
         <source>Delete selected items?</source>
@@ -52,7 +52,7 @@
       <trans-unit id="58ef962a87e6fbbea6027c17a954a18d">
         <source>Empty recordset returned.</source>
         <target>Empty recordset returned.</target>
-        <note>Line: 53</note>
+        <note>Line: 52</note>
       </trans-unit>
     </body>
   </file>
@@ -61,7 +61,7 @@
       <trans-unit id="4f29d8c727dcf2022ac241cb96c31083">
         <source>Empty recordset returned</source>
         <target>Empty recordset returned</target>
-        <note>Line: 53</note>
+        <note>Line: 52</note>
       </trans-unit>
     </body>
   </file>
@@ -70,7 +70,7 @@
       <trans-unit id="233a1ce8ca8efc5c0f45bf2df346812a">
         <source>Note that this page is available in all shops context only, this is why your context has just switched.</source>
         <target>Note that this page is available in all shops context only, this is why your context has just switched.</target>
-        <note>Line: 79</note>
+        <note>Line: 80</note>
       </trans-unit>
     </body>
   </file>
@@ -88,12 +88,17 @@
       <trans-unit id="d522a12a111ad26cc15c16da99cebef6">
         <source>This product is not associated with the store selected in the multistore header, please select another one.</source>
         <target>This product is not associated with the store selected in the multistore header, please select another one.</target>
-        <note>Line: 800</note>
+        <note>Line: 1449</note>
       </trans-unit>
       <trans-unit id="2c7dae12339ce3e31db32f7b78288369">
         <source>This page is only compatible in a single store context. To access the page, please select a store or [1]disable the multistore feature[/1].</source>
         <target>This page is only compatible in a single store context. To access the page, please select a store or [1]disable the multistore feature[/1].</target>
         <note>Line: 819</note>
+      </trans-unit>
+      <trans-unit id="4f4636f14ac64d9884a314d1e1a69e22">
+        <source>This page is only compatible in a single store context. Please select a store in the multistore header</source>
+        <target>This page is only compatible in a single store context. Please select a store in the multistore header</target>
+        <note>Line: 1465</note>
       </trans-unit>
     </body>
   </file>
@@ -138,7 +143,7 @@
       <trans-unit id="6252c0f2c2ed83b7b06dfca86d4650bb">
         <source>Invalid characters:</source>
         <target>Invalid characters:</target>
-        <note>Line: 167</note>
+        <note>Line: 170</note>
       </trans-unit>
     </body>
   </file>
