--- a/translations/default/AdminNotificationsSuccess.xlf
+++ b/translations/default/AdminNotificationsSuccess.xlf
@@ -23,42 +23,42 @@
       <trans-unit id="e9d71289fdbe4799d4fe91ccc17be0af">
         <source>The thumbnails were successfully regenerated.</source>
         <target>The thumbnails were successfully regenerated.</target>
-        <note>Line: 500</note>
+        <note>Line: 502</note>
       </trans-unit>
       <trans-unit id="1b73f0da557b7b0773d0fc6b5fd0a3b4">
         <source>Successful upload.</source>
         <target>Successful upload.</target>
-        <note>Line: 509</note>
+        <note>Line: 511</note>
       </trans-unit>
       <trans-unit id="759d07e8bdf6d3a5863ed521009b3ac1">
         <source>Duplication was completed successfully.</source>
         <target>Duplication was completed successfully.</target>
-        <note>Line: 510</note>
+        <note>Line: 512</note>
       </trans-unit>
       <trans-unit id="13f1ce18a02ac5293cf5a4274f9300de">
         <source>The selected images have successfully been moved.</source>
         <target>The selected images have successfully been moved.</target>
-        <note>Line: 516</note>
+        <note>Line: 518</note>
       </trans-unit>
       <trans-unit id="714903406a224ca68890e377ea111388">
         <source>Your cover image selection has been saved.</source>
         <target>Your cover image selection has been saved.</target>
-        <note>Line: 517</note>
+        <note>Line: 519</note>
       </trans-unit>
       <trans-unit id="b2266c7007fff254b1a9373f8a648a1c">
         <source>The image's shop association has been modified.</source>
         <target>The image's shop association has been modified.</target>
-        <note>Line: 518</note>
+        <note>Line: 520</note>
       </trans-unit>
       <trans-unit id="3a627484fcb2a5d110b44a390d5ee7c1">
         <source>A zone has been assigned to the selection successfully.</source>
         <target>A zone has been assigned to the selection successfully.</target>
-        <note>Line: 519</note>
+        <note>Line: 521</note>
       </trans-unit>
       <trans-unit id="be3af9d697c193da1a7dbfcf195050ea">
         <source>Successful upgrade.</source>
         <target>Successful upgrade.</target>
-        <note>Line: 520</note>
+        <note>Line: 522</note>
       </trans-unit>
     </body>
   </file>
@@ -67,7 +67,7 @@
       <trans-unit id="79f062391903591d68e514a400e136cf">
         <source>The status has been updated successfully.</source>
         <target>The status has been updated successfully.</target>
-        <note>Line: 749</note>
+        <note>Line: 766</note>
       </trans-unit>
     </body>
   </file>
@@ -85,7 +85,7 @@
       <trans-unit id="efc226b17e0532afff43be870bff0de7">
         <source>The settings have been updated.</source>
         <target>The settings have been updated.</target>
-        <note>Line: 99</note>
+        <note>Line: 100</note>
       </trans-unit>
     </body>
   </file>
@@ -100,11 +100,6 @@
   </file>
   <file original="modules/ps_linklist/src/Controller/Admin/Improve/Design/LinkBlockController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="b4a34d3f58b039e7685c2e39b5413757">
-        <source>Successful update.</source>
-        <target>Successful update.</target>
-        <note>Line: 211</note>
-      </trans-unit>
       <trans-unit id="149cd107b688af7a007e739fd51ac919">
         <source>Successful deletion.</source>
         <target>Successful deletion.</target>
@@ -126,22 +121,22 @@
       <trans-unit id="9dcfab12c54723f05853ee9d1581ce67">
         <source>Successfully overwrote email templates for theme %s with locale %s</source>
         <target>Successfully overwrote email templates for theme %s with locale %s</target>
-        <note>Line: 144</note>
+        <note>Line: 142</note>
       </trans-unit>
       <trans-unit id="fee15218c634e6df3e3409b28730db7c">
         <source>Successfully generated email templates for theme %s with locale %s</source>
         <target>Successfully generated email templates for theme %s with locale %s</target>
-        <note>Line: 156</note>
+        <note>Line: 154</note>
       </trans-unit>
       <trans-unit id="65a97071cf50d7bcca3efd2c8d3a5ccc">
         <source>Email theme configuration saved successfully</source>
         <target>Email theme configuration saved successfully</target>
-        <note>Line: 213</note>
+        <note>Line: 211</note>
       </trans-unit>
       <trans-unit id="807ca4c2efc56c5ccb79b408d828283a">
         <source>Test email for layout %layout% was successfully sent to %email%</source>
         <target>Test email for layout %layout% was successfully sent to %email%</target>
-        <note>Line: 333</note>
+        <note>Line: 331</note>
       </trans-unit>
     </body>
   </file>
@@ -178,21 +173,31 @@
       </trans-unit>
     </body>
   </file>
-  <file original="src/PrestaShopBundle/Controller/Admin/Sell/Catalog/CategoryController.php" source-language="en-US" target-language="en" datatype="plaintext">
+  <file original="src/PrestaShopBundle/Controller/Admin/Sell/Catalog/Product/ProductController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="b4a34d3f58b039e7685c2e39b5413757">
+        <source>Successful update.</source>
+        <target>Successful update.</target>
+        <note>Line: 356</note>
+      </trans-unit>
+      <trans-unit id="63cca4f457cad586dc9495a2e671b745">
+        <source>Successful duplication</source>
+        <target>Successful duplication</target>
+        <note>Line: 1166</note>
+      </trans-unit>
+      <trans-unit id="b70bfe10899842cec1073fb20b119c22">
+        <source>Your shop context has automatically been modified.</source>
+        <target>Your shop context has automatically been modified.</target>
+        <note>Line: 433</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Controller/Admin/Sell/Catalog/SupplierController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="893a9104a7f0ebd94a7f4171d1996c7d">
         <source>The image was successfully deleted.</source>
         <target>The image was successfully deleted.</target>
-        <note>Line: 482</note>
-      </trans-unit>
-    </body>
-  </file>
-  <file original="src/PrestaShopBundle/Controller/Admin/Sell/Catalog/Product/ProductController.php" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="63cca4f457cad586dc9495a2e671b745">
-        <source>Successful duplication</source>
-        <target>Successful duplication</target>
-        <note>Line: 269</note>
+        <note>Line: 473</note>
       </trans-unit>
     </body>
   </file>
@@ -210,7 +215,16 @@
       <trans-unit id="4a6c326f3ec43e638da38a44a21b5eb7">
         <source>Comment successfully added.</source>
         <target>Comment successfully added.</target>
-        <note>Line: 1305</note>
+        <note>Line: 1306</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Sell/Product/Image/ImageDropzoneType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="02d5b938505dcda41a52ef3abcbd354a">
+        <source>The selection has been successfully deleted.</source>
+        <target>The selection has been successfully deleted.</target>
+        <note>Line: 132</note>
       </trans-unit>
     </body>
   </file>
@@ -237,22 +251,22 @@
       <trans-unit id="9cdbb80d4545ac63312bd530784829a3">
         <source>The product was successfully added.</source>
         <target>The product was successfully added.</target>
-        <note>Line: 109</note>
+        <note>Line: 110</note>
       </trans-unit>
       <trans-unit id="dc6df66ef8a64a3bf228c70e64269a8e">
         <source>The product was successfully removed.</source>
         <target>The product was successfully removed.</target>
-        <note>Line: 110</note>
+        <note>Line: 111</note>
       </trans-unit>
       <trans-unit id="abb8738509cd73014d30de00b1b16ebe">
         <source>[1] products were successfully added.</source>
         <target>[1] products were successfully added.</target>
-        <note>Line: 111</note>
+        <note>Line: 112</note>
       </trans-unit>
       <trans-unit id="b34a5361f169c417578d4bfcf924aff6">
         <source>[1] products were successfully removed.</source>
         <target>[1] products were successfully removed.</target>
-        <note>Line: 112</note>
+        <note>Line: 113</note>
       </trans-unit>
     </body>
   </file>
