--- a/translations/default/AdminOrderscustomersFeature.xlf
+++ b/translations/default/AdminOrderscustomersFeature.xlf
@@ -10,37 +10,37 @@
       <trans-unit id="6f16ab6ec0a6064d0c8961257a3eb1f5">
         <source>Cart summary</source>
         <target>Cart summary</target>
-        <note>Line: 82</note>
+        <note>Line: 88</note>
       </trans-unit>
       <trans-unit id="e78b6f4eb3be046f4d25c07ce54954d4">
         <source>Ref:</source>
         <target>Ref:</target>
-        <note>Line: 156</note>
+        <note>Line: 162</note>
       </trans-unit>
       <trans-unit id="2fb3b950fd7711136f7f251ae5fbdbdc">
         <source>Text #</source>
         <target>Text #</target>
-        <note>Line: 131</note>
+        <note>Line: 137</note>
       </trans-unit>
       <trans-unit id="0bf157acdf9fe272c1379ff0b5442372">
         <source>Total cost of products:</source>
         <target>Total cost of products:</target>
-        <note>Line: 168</note>
+        <note>Line: 174</note>
       </trans-unit>
       <trans-unit id="3e69f668660d41b577a8da0fb53f6fa8">
         <source>Total value of vouchers:</source>
         <target>Total value of vouchers:</target>
-        <note>Line: 173</note>
+        <note>Line: 179</note>
       </trans-unit>
       <trans-unit id="79e21b5609402cd57d1dec7496771df8">
         <source>Total cost of gift wrapping:</source>
         <target>Total cost of gift wrapping:</target>
-        <note>Line: 179</note>
+        <note>Line: 185</note>
       </trans-unit>
       <trans-unit id="80fde97fb8929b8bea9ebcf5241be2f9">
         <source>Total shipping costs:</source>
         <target>Total shipping costs:</target>
-        <note>Line: 185</note>
+        <note>Line: 191</note>
       </trans-unit>
       <trans-unit id="58930025e1f95d65035e0df5d6c2ae41">
         <source>Order information</source>
@@ -65,7 +65,7 @@
       <trans-unit id="4f36361240acdff526598021f5459a87">
         <source>Create an order from this cart.</source>
         <target>Create an order from this cart.</target>
-        <note>Line: 75</note>
+        <note>Line: 80</note>
       </trans-unit>
       <trans-unit id="1d949d2235747b894bbaae35fbf44f1d">
         <source>Customer information</source>
@@ -536,37 +536,37 @@ Best regards,</target>
       <trans-unit id="90855df1b2d1240c62d81bd35d4cfb06">
         <source>Non ordered</source>
         <target>Non ordered</target>
-        <note>Line: 55</note>
+        <note>Line: 57</note>
       </trans-unit>
       <trans-unit id="121401ccf0e3e23bcefe6a454f0f0601">
         <source>Abandoned cart</source>
         <target>Abandoned cart</target>
-        <note>Line: 73</note>
+        <note>Line: 75</note>
       </trans-unit>
       <trans-unit id="f9b01554c32cc580b7380302f22613de">
         <source>Export carts</source>
         <target>Export carts</target>
-        <note>Line: 142</note>
+        <note>Line: 144</note>
       </trans-unit>
       <trans-unit id="54e85d70ea67acdcc86963b14d6223a8">
         <source>Abandoned Carts</source>
         <target>Abandoned Carts</target>
-        <note>Line: 177</note>
+        <note>Line: 179</note>
       </trans-unit>
       <trans-unit id="edeb0ec4f968653bb56eb2d7c50dab35">
         <source>From %date1% to %date2%</source>
         <target>From %date1% to %date2%</target>
-        <note>Line: 180</note>
+        <note>Line: 182</note>
       </trans-unit>
       <trans-unit id="ffbb5322a3702b0d8d9c7f506209c540">
         <source>Average Order Value</source>
         <target>Average Order Value</target>
-        <note>Line: 193</note>
+        <note>Line: 195</note>
       </trans-unit>
       <trans-unit id="4d9e1e12ad8a61ea2a5554407488d91a">
         <source>Net Profit per Visitor</source>
         <target>Net Profit per Visitor</target>
-        <note>Line: 207</note>
+        <note>Line: 209</note>
       </trans-unit>
     </body>
   </file>
@@ -581,16 +581,6 @@ Best regards,</target>
         <source>Returns prefix</source>
         <target>Returns prefix</target>
         <note>Line: 70</note>
-      </trans-unit>
-      <trans-unit id="bfc23574a242be4531bcb29877ac1d8a">
-        <source>Return Merchandise Authorization (RMA)</source>
-        <target>Return Merchandise Authorization (RMA)</target>
-        <note>Line: 88</note>
-      </trans-unit>
-      <trans-unit id="f504da64aae2dcfd85ce565121248f93">
-        <source>Customer explanation</source>
-        <target>Customer explanation</target>
-        <note>Line: 116</note>
       </trans-unit>
       <trans-unit id="6d72e074fdface4ae892543d39434175">
         <source>Returns form</source>
@@ -618,7 +608,7 @@ Best regards,</target>
       <trans-unit id="71754079aaeefc5c6e745ddd59f8a35f">
         <source>Free order</source>
         <target>Free order</target>
-        <note>Line: 275</note>
+        <note>Line: 277</note>
       </trans-unit>
     </body>
   </file>
@@ -627,7 +617,7 @@ Best regards,</target>
       <trans-unit id="ffb7e666a70151215b4c55c6268d7d72">
         <source>Newsletter</source>
         <target>Newsletter</target>
-        <note>Line: 1415</note>
+        <note>Line: 1425</note>
       </trans-unit>
     </body>
   </file>
@@ -732,12 +722,12 @@ Best regards,</target>
       <trans-unit id="c12a553ab6ad810580afa3f07aa9f51f">
         <source>not paid</source>
         <target>not paid</target>
-        <note>Line: 448</note>
+        <note>Line: 449</note>
       </trans-unit>
       <trans-unit id="8d4ac0e8c6f5900930ddfccd45d10abf">
         <source>overpaid</source>
         <target>overpaid</target>
-        <note>Line: 454</note>
+        <note>Line: 455</note>
       </trans-unit>
     </body>
   </file>
@@ -747,6 +737,15 @@ Best regards,</target>
         <source>Credit slip for order #%d</source>
         <target>Credit slip for order #%d</target>
         <note>Line: 88</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="src/Core/Form/IdentifiableObject/DataProvider/OrderReturnFormDataProvider.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="dd6e241dbe365b5006fb247e9acb58af">
+        <source>#%order_id% from %order_date%</source>
+        <target>#%order_id% from %order_date%</target>
+        <note>Line: 115</note>
       </trans-unit>
     </body>
   </file>
@@ -871,6 +870,15 @@ Best regards,</target>
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Controller/Admin/Sell/CustomerService/MerchandiseReturnController.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="bfc23574a242be4531bcb29877ac1d8a">
+        <source>Return Merchandise Authorization (RMA)</source>
+        <target>Return Merchandise Authorization (RMA)</target>
+        <note>Line: 126</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Controller/Admin/Sell/CustomerService/OrderMessageController.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="80c05dda6b88c30a777e8777e23be8d7">
@@ -904,17 +912,17 @@ Best regards,</target>
       <trans-unit id="03361eda68f746619c2ae3341eaa2f07">
         <source>Customer email</source>
         <target>Customer email</target>
-        <note>Line: 113</note>
+        <note>Line: 114</note>
       </trans-unit>
       <trans-unit id="e03982ee543fe69d4954d587f1f2a338">
         <source>The national ID card number of this person, or a unique tax identification number.</source>
         <target>The national ID card number of this person, or a unique tax identification number.</target>
-        <note>Line: 138</note>
+        <note>Line: 139</note>
       </trans-unit>
       <trans-unit id="baa31a65f29121c32b637bb845d41acf">
         <source>Address alias</source>
         <target>Address alias</target>
-        <note>Line: 159</note>
+        <note>Line: 160</note>
       </trans-unit>
     </body>
   </file>
@@ -989,6 +997,15 @@ Best regards,</target>
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Sell/CustomerService/MerchandiseReturn/OrderReturnType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="f504da64aae2dcfd85ce565121248f93">
+        <source>Customer explanation</source>
+        <target>Customer explanation</target>
+        <note>Line: 90</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Form/Admin/Sell/Order/AddProductRowType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="29aa46cc3d2677c7e0f216910df600ff">
@@ -1003,32 +1020,32 @@ Best regards,</target>
       <trans-unit id="282c7d15f714ec30b64b7db218f232f0">
         <source>The "shipping" field must be a valid number</source>
         <target>The "shipping" field must be a valid number</target>
-        <note>Line: 82</note>
+        <note>Line: 83</note>
       </trans-unit>
       <trans-unit id="1067f7778added234b6064bc8aa0765d">
         <source>Re-stock products</source>
         <target>Re-stock products</target>
-        <note>Line: 99</note>
+        <note>Line: 100</note>
       </trans-unit>
       <trans-unit id="e413f403aa8d5253b487d09fc84e47a0">
         <source>Generate a credit slip</source>
         <target>Generate a credit slip</target>
-        <note>Line: 108</note>
+        <note>Line: 109</note>
       </trans-unit>
       <trans-unit id="400264c3cd8f2e65b9f19375230b59b8">
         <source>Generate a voucher</source>
         <target>Generate a voucher</target>
-        <note>Line: 118</note>
+        <note>Line: 119</note>
       </trans-unit>
       <trans-unit id="532c865e83cd29bf74e7b968c8216767">
         <source>Product(s) price:</source>
         <target>Product(s) price:</target>
-        <note>Line: 130</note>
+        <note>Line: 131</note>
       </trans-unit>
       <trans-unit id="6e3a26f187c697d1d8c6668a55cd5561">
         <source>Product(s) price, excluding amount of initial voucher:</source>
         <target>Product(s) price, excluding amount of initial voucher:</target>
-        <note>Line: 131</note>
+        <note>Line: 132</note>
       </trans-unit>
     </body>
   </file>
@@ -1053,6 +1070,11 @@ Best regards,</target>
         <target>Delivery number</target>
         <note>Line: 60</note>
       </trans-unit>
+      <trans-unit id="133e649a7f103383bd0c9c35c40f8ce0">
+        <source>Enable product image</source>
+        <target>Enable product image</target>
+        <note>Line: 71</note>
+      </trans-unit>
     </body>
   </file>
   <file original="src/PrestaShopBundle/Form/Admin/Sell/Order/InternalNoteType.php" source-language="en-US" target-language="en" datatype="plaintext">
@@ -1069,12 +1091,67 @@ Best regards,</target>
       <trans-unit id="fdd748833c0e80edbfe6d955a1e2bef5">
         <source>After the sequential number</source>
         <target>After the sequential number</target>
-        <note>Line: 92</note>
+        <note>Line: 161</note>
       </trans-unit>
       <trans-unit id="2d34b4de2b2170f55f41facfbdb3684a">
         <source>Before the sequential number</source>
         <target>Before the sequential number</target>
-        <note>Line: 93</note>
+        <note>Line: 162</note>
+      </trans-unit>
+      <trans-unit id="916e303456985cc95e3f551665b0314f">
+        <source>Enable invoices</source>
+        <target>Enable invoices</target>
+        <note>Line: 90</note>
+      </trans-unit>
+      <trans-unit id="ae3a4016de0f41b2fd7a39494fb5a05a">
+        <source>Enable tax breakdown</source>
+        <target>Enable tax breakdown</target>
+        <note>Line: 102</note>
+      </trans-unit>
+      <trans-unit id="82c9667c9ef1dc29e479d080eaa998db">
+        <source>Invoice prefix</source>
+        <target>Invoice prefix</target>
+        <note>Line: 127</note>
+      </trans-unit>
+      <trans-unit id="ffd9d577464b4a615096c6d0c9c490ae">
+        <source>Add current year to invoice number</source>
+        <target>Add current year to invoice number</target>
+        <note>Line: 140</note>
+      </trans-unit>
+      <trans-unit id="adb5bc3c76ab4f69fc050090e05998c7">
+        <source>Reset sequential invoice number at the beginning of the year</source>
+        <target>Reset sequential invoice number at the beginning of the year</target>
+        <note>Line: 151</note>
+      </trans-unit>
+      <trans-unit id="e8065dc15d8cb943a6b6aa87f7b539e9">
+        <source>Position of the year date</source>
+        <target>Position of the year date</target>
+        <note>Line: 166</note>
+      </trans-unit>
+      <trans-unit id="8ae4286d38bb2235def98fd68d7420d2">
+        <source>Invoice number</source>
+        <target>Invoice number</target>
+        <note>Line: 176</note>
+      </trans-unit>
+      <trans-unit id="3dea916f8f5db8eb7167832fc3679059">
+        <source>Legal free text</source>
+        <target>Legal free text</target>
+        <note>Line: 192</note>
+      </trans-unit>
+      <trans-unit id="ae68c7d78a4135cf3d9790ef9f176cdf">
+        <source>Footer text</source>
+        <target>Footer text</target>
+        <note>Line: 205</note>
+      </trans-unit>
+      <trans-unit id="e57758881f26d49452c5ca0fd9fc140e">
+        <source>Invoice model</source>
+        <target>Invoice model</target>
+        <note>Line: 219</note>
+      </trans-unit>
+      <trans-unit id="57826bb01dcd3fa7c0de235ff4bb8ca3">
+        <source>Use the disk as cache for PDF invoices</source>
+        <target>Use the disk as cache for PDF invoices</target>
+        <note>Line: 229</note>
       </trans-unit>
     </body>
   </file>
@@ -1462,70 +1539,10 @@ Best regards,</target>
   </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Invoices/Blocks/invoice_options.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
-      <trans-unit id="133e649a7f103383bd0c9c35c40f8ce0">
-        <source>Enable product image</source>
-        <target>Enable product image</target>
-        <note>Line: 53</note>
-      </trans-unit>
       <trans-unit id="1b107c8f50c81b4b3497765849934a1c">
         <source>Invoice options</source>
         <target>Invoice options</target>
-        <note>Line: 34</note>
-      </trans-unit>
-      <trans-unit id="916e303456985cc95e3f551665b0314f">
-        <source>Enable invoices</source>
-        <target>Enable invoices</target>
-        <note>Line: 39</note>
-      </trans-unit>
-      <trans-unit id="ae3a4016de0f41b2fd7a39494fb5a05a">
-        <source>Enable tax breakdown</source>
-        <target>Enable tax breakdown</target>
-        <note>Line: 46</note>
-      </trans-unit>
-      <trans-unit id="82c9667c9ef1dc29e479d080eaa998db">
-        <source>Invoice prefix</source>
-        <target>Invoice prefix</target>
-        <note>Line: 60</note>
-      </trans-unit>
-      <trans-unit id="ffd9d577464b4a615096c6d0c9c490ae">
-        <source>Add current year to invoice number</source>
-        <target>Add current year to invoice number</target>
-        <note>Line: 68</note>
-      </trans-unit>
-      <trans-unit id="adb5bc3c76ab4f69fc050090e05998c7">
-        <source>Reset sequential invoice number at the beginning of the year</source>
-        <target>Reset sequential invoice number at the beginning of the year</target>
-        <note>Line: 77</note>
-      </trans-unit>
-      <trans-unit id="e8065dc15d8cb943a6b6aa87f7b539e9">
-        <source>Position of the year date</source>
-        <target>Position of the year date</target>
-        <note>Line: 86</note>
-      </trans-unit>
-      <trans-unit id="8ae4286d38bb2235def98fd68d7420d2">
-        <source>Invoice number</source>
-        <target>Invoice number</target>
-        <note>Line: 94</note>
-      </trans-unit>
-      <trans-unit id="3dea916f8f5db8eb7167832fc3679059">
-        <source>Legal free text</source>
-        <target>Legal free text</target>
-        <note>Line: 101</note>
-      </trans-unit>
-      <trans-unit id="ae68c7d78a4135cf3d9790ef9f176cdf">
-        <source>Footer text</source>
-        <target>Footer text</target>
-        <note>Line: 108</note>
-      </trans-unit>
-      <trans-unit id="e57758881f26d49452c5ca0fd9fc140e">
-        <source>Invoice model</source>
-        <target>Invoice model</target>
-        <note>Line: 115</note>
-      </trans-unit>
-      <trans-unit id="57826bb01dcd3fa7c0de235ff4bb8ca3">
-        <source>Use the disk as cache for PDF invoices</source>
-        <target>Use the disk as cache for PDF invoices</target>
-        <note>Line: 122</note>
+        <note>Line: 37</note>
       </trans-unit>
     </body>
   </file>
@@ -1970,27 +1987,27 @@ Best regards,</target>
       <trans-unit id="a44217022190f5734b2f72ba1e4f8a79">
         <source>Card number</source>
         <target>Card number</target>
-        <note>Line: 67</note>
+        <note>Line: 69</note>
       </trans-unit>
       <trans-unit id="f8b1369a8e9d90da0cae0b11049309af">
         <source>Not defined</source>
         <target>Not defined</target>
-        <note>Line: 95</note>
+        <note>Line: 97</note>
       </trans-unit>
       <trans-unit id="5735196b42849ae4fe6adac3ae14c3d1">
         <source>Card type</source>
         <target>Card type</target>
-        <note>Line: 75</note>
+        <note>Line: 77</note>
       </trans-unit>
       <trans-unit id="0bef7cd06cee6711378b85d90ce11527">
         <source>Cardholder name</source>
         <target>Cardholder name</target>
-        <note>Line: 91</note>
+        <note>Line: 93</note>
       </trans-unit>
       <trans-unit id="d694c11f096d5d666dde9ab8f9d9ba29">
         <source>Change currency</source>
         <target>Change currency</target>
-        <note>Line: 131</note>
+        <note>Line: 134</note>
       </trans-unit>
     </body>
   </file>
@@ -2069,7 +2086,7 @@ Best regards,</target>
       <trans-unit id="c21f969b5f03d33d43e04f8f136e7682">
         <source>default</source>
         <target>default</target>
-        <note>Line: 54</note>
+        <note>Line: 55</note>
       </trans-unit>
       <trans-unit id="0262a3dc4fae9adc8cb46e788806ccbf">
         <source>Create order</source>
@@ -2079,12 +2096,12 @@ Best regards,</target>
       <trans-unit id="03937134cedab9078be39a77ee3a48a0">
         <source>Group</source>
         <target>Group</target>
-        <note>Line: 55</note>
+        <note>Line: 56</note>
       </trans-unit>
       <trans-unit id="a37ede293936e29279ed543129451ec3">
         <source>Groups</source>
         <target>Groups</target>
-        <note>Line: 56</note>
+        <note>Line: 57</note>
       </trans-unit>
     </body>
   </file>
