--- a/translations/default/AdminOrderscustomersHelp.xlf
+++ b/translations/default/AdminOrderscustomersHelp.xlf
@@ -62,7 +62,7 @@
       <trans-unit id="3c1c7064989da051f0b4b904bcb408cf">
         <source>This customer will receive your newsletter via email.</source>
         <target>This customer will receive your newsletter via email.</target>
-        <note>Line: 1433</note>
+        <note>Line: 1443</note>
       </trans-unit>
     </body>
   </file>
@@ -165,6 +165,55 @@
       </trans-unit>
     </body>
   </file>
+  <file original="src/PrestaShopBundle/Form/Admin/Sell/Order/Invoices/InvoiceOptionsType.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="60422879211a12247e5da14751a59ac3">
+        <source>If enabled, your customers will receive an invoice for the purchase.</source>
+        <target>If enabled, your customers will receive an invoice for the purchase.</target>
+        <note>Line: 92</note>
+      </trans-unit>
+      <trans-unit id="afda8f59762167c6720a8afe24345df1">
+        <source>If required, show the total amount per rate of the corresponding tax.</source>
+        <target>If required, show the total amount per rate of the corresponding tax.</target>
+        <note>Line: 104</note>
+      </trans-unit>
+      <trans-unit id="0e963c5b7a1b6bb67429c7d0e7f45741">
+        <source>Adds an image in front of the product name on the invoice</source>
+        <target>Adds an image in front of the product name on the invoice</target>
+        <note>Line: 116</note>
+      </trans-unit>
+      <trans-unit id="7b87585267aed27676374641013ab66e">
+        <source>Freely definable prefix for invoice number (e.g. #IN00001).</source>
+        <target>Freely definable prefix for invoice number (e.g. #IN00001).</target>
+        <note>Line: 129</note>
+      </trans-unit>
+      <trans-unit id="a93c4ec4b8ef325acf067112d7437c59">
+        <source>The next invoice will begin with this number, and then increase with each additional invoice. Set to 0 if you want to keep the current number (which is #%number%).</source>
+        <target>The next invoice will begin with this number, and then increase with each additional invoice. Set to 0 if you want to keep the current number (which is #%number%).</target>
+        <note>Line: 178</note>
+      </trans-unit>
+      <trans-unit id="7a490daaa2605a4a5be08b30a0c6fe24">
+        <source>Use this field to show additional information on the invoice, below the payment methods summary (like specific legal information).</source>
+        <target>Use this field to show additional information on the invoice, below the payment methods summary (like specific legal information).</target>
+        <note>Line: 194</note>
+      </trans-unit>
+      <trans-unit id="e3501dec19c50333c49b4d7d66931abc">
+        <source>This text will appear at the bottom of the invoice, below your company details.</source>
+        <target>This text will appear at the bottom of the invoice, below your company details.</target>
+        <note>Line: 207</note>
+      </trans-unit>
+      <trans-unit id="4e00dcdfbf2f4a6156c01fb15ded75c5">
+        <source>Choose an invoice model.</source>
+        <target>Choose an invoice model.</target>
+        <note>Line: 220</note>
+      </trans-unit>
+      <trans-unit id="41d8a2a057a1e1b9663d49896d3162f3">
+        <source>Saves memory but slows down the PDF generation.</source>
+        <target>Saves memory but slows down the PDF generation.</target>
+        <note>Line: 233</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Address/Blocks/required_fields.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="166f81a02b692b37820d75e7c0ca2b24">
@@ -185,6 +234,11 @@
         <source>Please make sure you are complying with the opt-in legislation applicable in your country.</source>
         <target>Please make sure you are complying with the opt-in legislation applicable in your country.</target>
         <note>Line: 38</note>
+      </trans-unit>
+      <trans-unit id="e7ff9c100be184662fc1ef3f0efc5850">
+        <source><![CDATA[[1]Make[/1] sure you enable partner offers in the [2]Shop Parameters > Customer Settings[/2] section of the back office before requiring them. Otherwise, new customers won't be able to create an account and [1]proceed[/1] to checkout.]]></source>
+        <target><![CDATA[[1]Make[/1] sure you enable partner offers in the [2]Shop Parameters > Customer Settings[/2] section of the back office before requiring them. Otherwise, new customers won't be able to create an account and [1]proceed[/1] to checkout.]]></target>
+        <note>Line: 43</note>
       </trans-unit>
     </body>
   </file>
@@ -224,55 +278,6 @@
       </trans-unit>
     </body>
   </file>
-  <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Invoices/Blocks/invoice_options.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
-    <body>
-      <trans-unit id="60422879211a12247e5da14751a59ac3">
-        <source>If enabled, your customers will receive an invoice for the purchase.</source>
-        <target>If enabled, your customers will receive an invoice for the purchase.</target>
-        <note>Line: 39</note>
-      </trans-unit>
-      <trans-unit id="afda8f59762167c6720a8afe24345df1">
-        <source>If required, show the total amount per rate of the corresponding tax.</source>
-        <target>If required, show the total amount per rate of the corresponding tax.</target>
-        <note>Line: 46</note>
-      </trans-unit>
-      <trans-unit id="0e963c5b7a1b6bb67429c7d0e7f45741">
-        <source>Adds an image in front of the product name on the invoice</source>
-        <target>Adds an image in front of the product name on the invoice</target>
-        <note>Line: 53</note>
-      </trans-unit>
-      <trans-unit id="7b87585267aed27676374641013ab66e">
-        <source>Freely definable prefix for invoice number (e.g. #IN00001).</source>
-        <target>Freely definable prefix for invoice number (e.g. #IN00001).</target>
-        <note>Line: 60</note>
-      </trans-unit>
-      <trans-unit id="a93c4ec4b8ef325acf067112d7437c59">
-        <source>The next invoice will begin with this number, and then increase with each additional invoice. Set to 0 if you want to keep the current number (which is #%number%).</source>
-        <target>The next invoice will begin with this number, and then increase with each additional invoice. Set to 0 if you want to keep the current number (which is #%number%).</target>
-        <note>Line: 94</note>
-      </trans-unit>
-      <trans-unit id="7a490daaa2605a4a5be08b30a0c6fe24">
-        <source>Use this field to show additional information on the invoice, below the payment methods summary (like specific legal information).</source>
-        <target>Use this field to show additional information on the invoice, below the payment methods summary (like specific legal information).</target>
-        <note>Line: 101</note>
-      </trans-unit>
-      <trans-unit id="e3501dec19c50333c49b4d7d66931abc">
-        <source>This text will appear at the bottom of the invoice, below your company details.</source>
-        <target>This text will appear at the bottom of the invoice, below your company details.</target>
-        <note>Line: 108</note>
-      </trans-unit>
-      <trans-unit id="4e00dcdfbf2f4a6156c01fb15ded75c5">
-        <source>Choose an invoice model.</source>
-        <target>Choose an invoice model.</target>
-        <note>Line: 115</note>
-      </trans-unit>
-      <trans-unit id="41d8a2a057a1e1b9663d49896d3162f3">
-        <source>Saves memory but slows down the PDF generation.</source>
-        <target>Saves memory but slows down the PDF generation.</target>
-        <note>Line: 122</note>
-      </trans-unit>
-    </body>
-  </file>
   <file original="src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/Create/cart.html.twig" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="c78ba40a94a132dc170cba2f8c66f310">
@@ -301,7 +306,7 @@
       <trans-unit id="f9a5775d7def0b6c57393fc86bb7a730">
         <source>Do not forget to update your exchange rate before making this change.</source>
         <target>Do not forget to update your exchange rate before making this change.</target>
-        <note>Line: 145</note>
+        <note>Line: 148</note>
       </trans-unit>
     </body>
   </file>
@@ -310,7 +315,7 @@
       <trans-unit id="5728ff6d5efd64ef7db72028eefc7262">
         <source>(Max %amount_refundable% %tax_method%)</source>
         <target>(Max %amount_refundable% %tax_method%)</target>
-        <note>Line: 140</note>
+        <note>Line: 139</note>
       </trans-unit>
     </body>
   </file>
