--- a/translations/default/ModulesEmailalertsShop.xlf
+++ b/translations/default/ModulesEmailalertsShop.xlf
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
+  <file original="modules/ps_emailalerts/controllers/front/actions.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="900f8551b29793ecb604a545b2059cc1">
+        <source>Your e-mail address is invalid</source>
+        <target>Your e-mail address is invalid</target>
+        <note>Line: 153</note>
+      </trans-unit>
+      <trans-unit id="bb51a155575b81f4a07f7a9bafdc3b01">
+        <source>You already have an alert for this product</source>
+        <target>You already have an alert for this product</target>
+        <note>Line: 120</note>
+      </trans-unit>
+      <trans-unit id="61172eb93737ebf095d3fa02119ce1df">
+        <source>Request notification registered</source>
+        <target>Request notification registered</target>
+        <note>Line: 145</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="modules/ps_emailalerts/views/templates/front/mailalerts-account-line.tpl" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="8229eb3bbcf499e71184b4825fda2f05">
+        <source>Remove mail alert</source>
+        <target>Remove mail alert</target>
+        <note>Line: 35</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="modules/ps_emailalerts/views/templates/front/mailalerts-account.tpl" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="8bb23c2ae698681ebb650f43acb54dab">
@@ -23,12 +51,17 @@
       <trans-unit id="67135a14d3ac4f1369633dd006d6efec">
         <source>your@email.com</source>
         <target>your@email.com</target>
-        <note>Line: 29</note>
+        <note>Line: 30</note>
       </trans-unit>
       <trans-unit id="546e02eaa9a986c83cc347e273269f2c">
         <source>Notify me when available</source>
         <target>Notify me when available</target>
-        <note>Line: 42</note>
+        <note>Line: 43</note>
+      </trans-unit>
+      <trans-unit id="007fee52da442e0ceaf1de103e51922f">
+        <source>You will be notified when available</source>
+        <target>You will be notified when available</target>
+        <note>Line: 47</note>
       </trans-unit>
     </body>
   </file>
