--- a/translations/default/ModulesGAnalyticsAdmin.xlf
+++ b/translations/default/ModulesGAnalyticsAdmin.xlf
@@ -5,7 +5,7 @@
       <trans-unit id="c9cc8cce247e49bae79f15173ce97354">
         <source>Save</source>
         <target>Save</target>
-        <note>Line: 165</note>
+        <note>Line: 183</note>
       </trans-unit>
       <trans-unit id="630f6dc397fe74e52d5189e2c80f282b">
         <source>Back to list</source>
@@ -30,37 +30,37 @@
       <trans-unit id="bcd08e73ca9d8bfed2cccd50dd6d8328">
         <source>Enable User ID tracking</source>
         <target>Enable User ID tracking</target>
-        <note>Line: 100</note>
+        <note>Line: 117</note>
       </trans-unit>
       <trans-unit id="93cba07454f06a4a960172bbd6e2a435">
         <source>Yes</source>
         <target>Yes</target>
-        <note>Line: 178</note>
+        <note>Line: 196</note>
       </trans-unit>
       <trans-unit id="bafd7322c6e97d25b6299b5d6fe8920b">
         <source>No</source>
         <target>No</target>
-        <note>Line: 183</note>
+        <note>Line: 201</note>
       </trans-unit>
       <trans-unit id="62d498990ba9938425763b6314b5c42a">
         <source>Anonymize IP</source>
         <target>Anonymize IP</target>
-        <note>Line: 116</note>
+        <note>Line: 134</note>
       </trans-unit>
       <trans-unit id="86b9320b6ef4da2e8845a6e77e7341d3">
         <source>Use this option to anonymize the visitor’s IP to comply with data privacy laws in some countries</source>
         <target>Use this option to anonymize the visitor’s IP to comply with data privacy laws in some countries</target>
-        <note>Line: 118</note>
+        <note>Line: 136</note>
       </trans-unit>
       <trans-unit id="86b29d17f0ac2035844b54408374ea0f">
         <source>Enable Back Office Tracking</source>
         <target>Enable Back Office Tracking</target>
-        <note>Line: 134</note>
+        <note>Line: 152</note>
       </trans-unit>
       <trans-unit id="0767b68fe502b38f6ea34a0611925473">
         <source>Use this option to enable the tracking inside the Back Office</source>
         <target>Use this option to enable the tracking inside the Back Office</target>
-        <note>Line: 136</note>
+        <note>Line: 154</note>
       </trans-unit>
       <trans-unit id="a0f9627ee971a4d097497fe5d3884b17">
         <source>Cancelled order states</source>
@@ -75,22 +75,22 @@
       <trans-unit id="eaa289807715dff623c794d83941f3ab">
         <source>Enable Cross-Domain tracking</source>
         <target>Enable Cross-Domain tracking</target>
-        <note>Line: 172</note>
+        <note>Line: 190</note>
       </trans-unit>
       <trans-unit id="612e1a524ec979815b12182c34e2daa0">
         <source>Account ID updated successfully</source>
         <target>Account ID updated successfully</target>
-        <note>Line: 218</note>
+        <note>Line: 241</note>
       </trans-unit>
       <trans-unit id="8e7b67b44506b7ac6685da041a603044">
         <source>Settings for User ID updated successfully</source>
         <target>Settings for User ID updated successfully</target>
-        <note>Line: 228</note>
+        <note>Line: 251</note>
       </trans-unit>
       <trans-unit id="20d72bc5caef85d03b256e2abbd80da2">
         <source>Settings for Anonymize IP updated successfully</source>
         <target>Settings for Anonymize IP updated successfully</target>
-        <note>Line: 233</note>
+        <note>Line: 261</note>
       </trans-unit>
       <trans-unit id="d295a2a7d9152c4f215e5e7e43302bf0">
         <source>Settings for Enable Back Office tracking updated successfully</source>
@@ -101,6 +101,36 @@
         <source>Settings for cancelled order states updated successfully</source>
         <target>Settings for cancelled order states updated successfully</target>
         <note>Line: 246</note>
+      </trans-unit>
+      <trans-unit id="0824d52b9e53469ffa87f750985865c9">
+        <source>Enable Google Analytics 4</source>
+        <target>Enable Google Analytics 4</target>
+        <note>Line: 100</note>
+      </trans-unit>
+      <trans-unit id="233b2b197d921eebd8c0f45e4354fea7">
+        <source>Canceled order states</source>
+        <target>Canceled order states</target>
+        <note>Line: 170</note>
+      </trans-unit>
+      <trans-unit id="899811bf0d6c66e1435a14005939c792">
+        <source>Choose order states, in which you consider the given order canceled. This will usually be the default "Canceled" state, but some shops may have extra states like "Returned" etc.</source>
+        <target>Choose order states, in which you consider the given order canceled. This will usually be the default "Canceled" state, but some shops may have extra states like "Returned" etc.</target>
+        <note>Line: 172</note>
+      </trans-unit>
+      <trans-unit id="b1afcbbf2757dec0f0d6db46840a0db6">
+        <source>Settings for Cross-Domain updated successfully</source>
+        <target>Settings for Cross-Domain updated successfully</target>
+        <note>Line: 256</note>
+      </trans-unit>
+      <trans-unit id="948f7a0f7b01eb558317da6b42ec103c">
+        <source>Settings for Enable Back Office tracking updated successfully.</source>
+        <target>Settings for Enable Back Office tracking updated successfully.</target>
+        <note>Line: 266</note>
+      </trans-unit>
+      <trans-unit id="26aeb0695904bdd129fd0bb2b13de9fb">
+        <source>Settings for canceled order states updated successfully.</source>
+        <target>Settings for canceled order states updated successfully.</target>
+        <note>Line: 274</note>
       </trans-unit>
     </body>
   </file>
