--- a/translations/default/messages.xlf
+++ b/translations/default/messages.xlf
@@ -1719,6 +1719,381 @@
       </trans-unit>
     </body>
   </file>
+  <file original="modules/psgdpr/classes/GDPRLog.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="ba2c992afac038de48cb8866fb819fd6">
+        <source>Guest client : ID</source>
+        <target>Guest client : ID</target>
+        <note>Line: 102</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="modules/psgdpr/controllers/front/ExportDataToCsv.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="3bcfe5c02494f4ff326c5dbd1dcffa91">
+        <source>General info</source>
+        <target>General info</target>
+        <note>Line: 67
+Comment: GENERAL INFO</note>
+      </trans-unit>
+      <trans-unit id="019ec3132cdf8ee0f2e2a75cf5d3e459">
+        <source>Gender</source>
+        <target>Gender</target>
+        <note>Line: 71</note>
+      </trans-unit>
+      <trans-unit id="49ee3087348e8d44e1feda1917443987">
+        <source>Name</source>
+        <target>Name</target>
+        <note>Line: 261</note>
+      </trans-unit>
+      <trans-unit id="9c37b7b6ff829e977df287900543ea54">
+        <source>Birth date</source>
+        <target>Birth date</target>
+        <note>Line: 73</note>
+      </trans-unit>
+      <trans-unit id="9d8d2d5ab12b515182a505f54db7f538">
+        <source>Age</source>
+        <target>Age</target>
+        <note>Line: 74</note>
+      </trans-unit>
+      <trans-unit id="ce8ae9da5b7cd6c3df2929543a9af92d">
+        <source>Email</source>
+        <target>Email</target>
+        <note>Line: 75</note>
+      </trans-unit>
+      <trans-unit id="4994a8ffeba4ac3140beb89e8d41f174">
+        <source>Language</source>
+        <target>Language</target>
+        <note>Line: 76</note>
+      </trans-unit>
+      <trans-unit id="7d9f5730d745285016630376deebcbd8">
+        <source>Creation account data</source>
+        <target>Creation account data</target>
+        <note>Line: 77</note>
+      </trans-unit>
+      <trans-unit id="5e5914912e8d2f2765525840acf98bea">
+        <source>Last visit</source>
+        <target>Last visit</target>
+        <note>Line: 78</note>
+      </trans-unit>
+      <trans-unit id="60adc330494a66981dec101c81e27f03">
+        <source>Siret</source>
+        <target>Siret</target>
+        <note>Line: 79</note>
+      </trans-unit>
+      <trans-unit id="6c5a79a30b5c5c4fb6ec45735d32edc2">
+        <source>Ape</source>
+        <target>Ape</target>
+        <note>Line: 80</note>
+      </trans-unit>
+      <trans-unit id="1c76cbfe21c6f44c1d1e59d54f3e4420">
+        <source>Company</source>
+        <target>Company</target>
+        <note>Line: 115</note>
+      </trans-unit>
+      <trans-unit id="15bbb9d0bbf25e8d2978de1168c749dc">
+        <source>Website</source>
+        <target>Website</target>
+        <note>Line: 82</note>
+      </trans-unit>
+      <trans-unit id="284b47b0bb63ae2df3b29f0e691d6fcf">
+        <source>Addresses</source>
+        <target>Addresses</target>
+        <note>Line: 110
+Comment: ADDRESSES</note>
+      </trans-unit>
+      <trans-unit id="effdb9ce6c5d44df31b89d7069c8e0fb">
+        <source>Alias</source>
+        <target>Alias</target>
+        <note>Line: 114</note>
+      </trans-unit>
+      <trans-unit id="dd7bf230fde8d4836917806aff6a6b27">
+        <source>Address</source>
+        <target>Address</target>
+        <note>Line: 117</note>
+      </trans-unit>
+      <trans-unit id="fac322c3b42d04806299ae195f8a9238">
+        <source>Phone(s)</source>
+        <target>Phone(s)</target>
+        <note>Line: 118</note>
+      </trans-unit>
+      <trans-unit id="59716c97497eb9694541f7c3d37b1a4d">
+        <source>Country</source>
+        <target>Country</target>
+        <note>Line: 341</note>
+      </trans-unit>
+      <trans-unit id="44749712dbec183e983dcd78a7736c41">
+        <source>Date</source>
+        <target>Date</target>
+        <note>Line: 342</note>
+      </trans-unit>
+      <trans-unit id="587bb937485e3dbe02ea0d281600bb52">
+        <source>No addresses</source>
+        <target>No addresses</target>
+        <note>Line: 140</note>
+      </trans-unit>
+      <trans-unit id="63d5049791d9d79d86e9a108b0a999ca">
+        <source>Reference</source>
+        <target>Reference</target>
+        <note>Line: 155</note>
+      </trans-unit>
+      <trans-unit id="c453a4b8e8d98e82f35b67f433e3b4da">
+        <source>Payment</source>
+        <target>Payment</target>
+        <note>Line: 156</note>
+      </trans-unit>
+      <trans-unit id="d02bbc3cb147c272b0445ac5ca7d1a36">
+        <source>Order state</source>
+        <target>Order state</target>
+        <note>Line: 157</note>
+      </trans-unit>
+      <trans-unit id="ea067eb37801c5aab1a1c685eb97d601">
+        <source>Total paid</source>
+        <target>Total paid</target>
+        <note>Line: 158</note>
+      </trans-unit>
+      <trans-unit id="08cfa7751d1812e961560f623e082aba">
+        <source>No orders</source>
+        <target>No orders</target>
+        <note>Line: 177</note>
+      </trans-unit>
+      <trans-unit id="c8be451a5698956a0e78b5c2caab4821">
+        <source>Products bought</source>
+        <target>Products bought</target>
+        <note>Line: 189</note>
+      </trans-unit>
+      <trans-unit id="79af0c77f8ce8cbb17006e22e8e9494b">
+        <source>Order ref</source>
+        <target>Order ref</target>
+        <note>Line: 193</note>
+      </trans-unit>
+      <trans-unit id="2cc349f141e8c9932281bf573f2c40ef">
+        <source>Product ref</source>
+        <target>Product ref</target>
+        <note>Line: 194</note>
+      </trans-unit>
+      <trans-unit id="694e8d1f2ee056f98ee488bdc4982d73">
+        <source>Quantity</source>
+        <target>Quantity</target>
+        <note>Line: 262</note>
+      </trans-unit>
+      <trans-unit id="fc26e55e0993a75e892175deb02aae15">
+        <source>Carts</source>
+        <target>Carts</target>
+        <note>Line: 222
+Comment: CARTS</note>
+      </trans-unit>
+      <trans-unit id="490aa6e856ccf208a054389e47ce0d06">
+        <source>Id</source>
+        <target>Id</target>
+        <note>Line: 226</note>
+      </trans-unit>
+      <trans-unit id="db205f01b4fd580fb5daa9072d96849d">
+        <source>Total products</source>
+        <target>Total products</target>
+        <note>Line: 227</note>
+      </trans-unit>
+      <trans-unit id="bbd47e26c95290218b2fc449e54e8cdc">
+        <source>No carts</source>
+        <target>No carts</target>
+        <note>Line: 288</note>
+      </trans-unit>
+      <trans-unit id="89ac4bd26e975229032206877db1f027">
+        <source>Product(s) still in cart</source>
+        <target>Product(s) still in cart</target>
+        <note>Line: 255
+Comment: PRODUCTS IN CART</note>
+      </trans-unit>
+      <trans-unit id="fc6dfe4f8b07fc04c99e27425f780754">
+        <source>Cart ID</source>
+        <target>Cart ID</target>
+        <note>Line: 259</note>
+      </trans-unit>
+      <trans-unit id="75ed578ac3cb02b0ba40002a25bc0403">
+        <source>Product reference</source>
+        <target>Product reference</target>
+        <note>Line: 260</note>
+      </trans-unit>
+      <trans-unit id="09dc02ecbb078868a3a86dded030076d">
+        <source>No products</source>
+        <target>No products</target>
+        <note>Line: 282</note>
+      </trans-unit>
+      <trans-unit id="41de6d6cfb8953c021bbe4ba0701c8a1">
+        <source>Messages</source>
+        <target>Messages</target>
+        <note>Line: 299
+Comment: MESSSAGES</note>
+      </trans-unit>
+      <trans-unit id="a12a3079e14ced46e69ba52b8a90b21a">
+        <source>IP</source>
+        <target>IP</target>
+        <note>Line: 303</note>
+      </trans-unit>
+      <trans-unit id="58a747ef5d07d22101bdcd058e772ff9">
+        <source>No messages</source>
+        <target>No messages</target>
+        <note>Line: 321</note>
+      </trans-unit>
+      <trans-unit id="93bd48ecb9c4d5c4eec7fefffbb2070f">
+        <source>Last connections</source>
+        <target>Last connections</target>
+        <note>Line: 332
+Comment: CONNECTIONS</note>
+      </trans-unit>
+      <trans-unit id="33e29c1d042c0923008f78b46af94984">
+        <source>Origin request</source>
+        <target>Origin request</target>
+        <note>Line: 336</note>
+      </trans-unit>
+      <trans-unit id="57f32d7d0e6672cc2b60bc7a49f91453">
+        <source>Page viewed</source>
+        <target>Page viewed</target>
+        <note>Line: 337</note>
+      </trans-unit>
+      <trans-unit id="fae6aba9bc4e69842be0ac98e15c4c99">
+        <source>Time on the page</source>
+        <target>Time on the page</target>
+        <note>Line: 338</note>
+      </trans-unit>
+      <trans-unit id="75ba8d70e3692ba200f0e0df37b4d2ae">
+        <source>IP address</source>
+        <target>IP address</target>
+        <note>Line: 339</note>
+      </trans-unit>
+      <trans-unit id="c51e6bdf66e5d601e85d055301014410">
+        <source>No connections</source>
+        <target>No connections</target>
+        <note>Line: 360</note>
+      </trans-unit>
+    </body>
+  </file>
+  <file original="modules/psgdpr/psgdpr.php" source-language="en-US" target-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="5966265f35dd87febf4d59029bc9ef66">
+        <source>Official GDPR compliance</source>
+        <target>Official GDPR compliance</target>
+        <note>Line: 138</note>
+      </trans-unit>
+      <trans-unit id="74f261754dce7bb6c07ea3f586c3e2f1">
+        <source>Make your store comply with the General Data Protection Regulation (GDPR).</source>
+        <target>Make your store comply with the General Data Protection Regulation (GDPR).</target>
+        <note>Line: 139</note>
+      </trans-unit>
+      <trans-unit id="bb8956c67b82c7444a80c6b2433dd8b4">
+        <source>Are you sure you want to uninstall this module?</source>
+        <target>Are you sure you want to uninstall this module?</target>
+        <note>Line: 151
+Comment: Confirm uninstall</note>
+      </trans-unit>
+      <trans-unit id="e9415612c1d72517733c98e6877a6b46">
+        <source>There was an error during the uninstallation. Please contact us through Addons website.</source>
+        <target>There was an error during the uninstallation. Please contact us through Addons website.</target>
+        <note>Line: 205
+Comment: if something wrong return false</note>
+      </trans-unit>
+      <trans-unit id="f82c07eeaadf212c53a454cca4073e82">
+        <source>There was an error on module uninstall. Please contact us through Addons website</source>
+        <target>There was an error on module uninstall. Please contact us through Addons website</target>
+        <note>Line: 228</note>
+      </trans-unit>
+      <trans-unit id="f3aa5220c9615fe82e680b31ec805772">
+        <source>Data accessibility</source>
+        <target>Data accessibility</target>
+        <note>Line: 326</note>
+      </trans-unit>
+      <trans-unit id="2f4239765c85ef14bc7d270b88169431">
+        <source>How can a customer retrieve all of his personal data?</source>
+        <target>How can a customer retrieve all of his personal data?</target>
+        <note>Line: 329</note>
+      </trans-unit>
+      <trans-unit id="f23b2c81c46ee0bef9e68cf8a4e8094d">
+        <source>From his customer account, a new tab called My Personal Data is available and your customer can retrieve all of his personal data collected by your shop and installed modules, in PDF or CSV format.</source>
+        <target>From his customer account, a new tab called My Personal Data is available and your customer can retrieve all of his personal data collected by your shop and installed modules, in PDF or CSV format.</target>
+        <note>Line: 330</note>
+      </trans-unit>
+      <trans-unit id="b05c17c9e1019a5b801746c5b8c5d965">
+        <source>Customer consent</source>
+        <target>Customer consent</target>
+        <note>Line: 335</note>
+      </trans-unit>
+      <trans-unit id="de571168b7c4d4ab2c7826d2df1ec04b">
+        <source>There is no consent confirmation checkbox in the contact form. Isn't this a requirement?</source>
+        <target>There is no consent confirmation checkbox in the contact form. Isn't this a requirement?</target>
+        <note>Line: 338</note>
+      </trans-unit>
+      <trans-unit id="5132f2c7071d21437185cc8906ff30d6">
+        <source>No, it is not a requirement as the customer gives consent by clicking on the Submit message button. Only a message is required to give your customers more information about the use of personal data on your website. We are currently working on a new version of the contact form, it will be available really soon for your online store.</source>
+        <target>No, it is not a requirement as the customer gives consent by clicking on the Submit message button. Only a message is required to give your customers more information about the use of personal data on your website. We are currently working on a new version of the contact form, it will be available really soon for your online store.</target>
+        <note>Line: 339</note>
+      </trans-unit>
+      <trans-unit id="ea4ec6483496abdc141f5ded3db3ede1">
+        <source>Data erasure</source>
+        <target>Data erasure</target>
+        <note>Line: 344</note>
+      </trans-unit>
+      <trans-unit id="9176e38989ed06bc8bc2d2eb64ff651a">
+        <source>How will a customer ask for all of his personal data to be deleted ?</source>
+        <target>How will a customer ask for all of his personal data to be deleted ?</target>
+        <note>Line: 347</note>
+      </trans-unit>
+      <trans-unit id="9bfcf0be1757b83609e3cd7fc59fc7ea">
+        <source>The customer will send a message from the contact form for any rectification and erasure requests, justifying his request.</source>
+        <target>The customer will send a message from the contact form for any rectification and erasure requests, justifying his request.</target>
+        <note>Line: 348</note>
+      </trans-unit>
+      <trans-unit id="c11321f9fb4112e493e86a1410745b32">
+        <source>There is no Remove Data button in the customer account. Isn't this a requirement?</source>
+        <target>There is no Remove Data button in the customer account. Isn't this a requirement?</target>
+        <note>Line: 351</note>
+      </trans-unit>
+      <trans-unit id="0124f1dc4ed1770b17898a61a00ba224">
+        <source>No, the Remove Data button in the customer account is not an obligation. For the data erasure requests, your customers can request data removal only under certain circumstances, that is the reason why we decided not to include an automatic Remove Data button in their customer account.
+
+They can, however, contact you anytime via your contact form, in this case, you can review their request and once you accept it, you will be able to remove their personal data directly in the configuration page of our Official GDPR Compliance module.</source>
+        <target>No, the Remove Data button in the customer account is not an obligation. For the data erasure requests, your customers can request data removal only under certain circumstances, that is the reason why we decided not to include an automatic Remove Data button in their customer account.
+
+They can, however, contact you anytime via your contact form, in this case, you can review their request and once you accept it, you will be able to remove their personal data directly in the configuration page of our Official GDPR Compliance module.</target>
+        <note>Line: 352</note>
+      </trans-unit>
+      <trans-unit id="72cd5bd2552bb7c07721af5830c6cb57">
+        <source>How to remove the personal data of a customer?</source>
+        <target>How to remove the personal data of a customer?</target>
+        <note>Line: 355</note>
+      </trans-unit>
+      <trans-unit id="cb91cb05467ec71c32d5c23913b71bd0">
+        <source>If the request is valid, from the Personal Data Management tab of this module, any customer can be found by typing the first few letters of his name or email address in the search bar.
+Before deleting any data, we recommend you to download all the invoices of the involved customer. After deleting the data with the “Remove data” button, the customer’s orders can’t be legally deleted, they just won’t be linked to any account. This allows you to keep precise statistics of your shop.</source>
+        <target>If the request is valid, from the Personal Data Management tab of this module, any customer can be found by typing the first few letters of his name or email address in the search bar.
+Before deleting any data, we recommend you to download all the invoices of the involved customer. After deleting the data with the “Remove data” button, the customer’s orders can’t be legally deleted, they just won’t be linked to any account. This allows you to keep precise statistics of your shop.</target>
+        <note>Line: 356</note>
+      </trans-unit>
+      <trans-unit id="87ad69c27077c1bb5c57d004e7eac4aa">
+        <source>After removing all personal data of a customer from my database, what will happen to his orders?</source>
+        <target>After removing all personal data of a customer from my database, what will happen to his orders?</target>
+        <note>Line: 359</note>
+      </trans-unit>
+      <trans-unit id="10201d0ca5552dfa9bd599483105ffd0">
+        <source>Due to other legal obligations, his orders will still be stocked but they are no longer associated with the customer.
+Only the name, shipping, and billing information must be kept in the order details page for legal reasons, invoicing, and accounting.
+According to the Rec.30;Art.7(1)(c)</source>
+        <target>Due to other legal obligations, his orders will still be stocked but they are no longer associated with the customer.
+Only the name, shipping, and billing information must be kept in the order details page for legal reasons, invoicing, and accounting.
+According to the Rec.30;Art.7(1)(c)</target>
+        <note>Line: 360</note>
+      </trans-unit>
+      <trans-unit id="e7502bc086a11cfa8789053af27eab2d">
+        <source>Saved with success !</source>
+        <target>Saved with success !</target>
+        <note>Line: 524</note>
+      </trans-unit>
+      <trans-unit id="a59aa7fb037f2498e36a6d687869e83e">
+        <source>Customer data deleted by official GDPR module.</source>
+        <target>Customer data deleted by official GDPR module.</target>
+        <note>Line: 549</note>
+      </trans-unit>
+    </body>
+  </file>
   <file original="src/PrestaShopBundle/Form/Admin/Type/ChangePasswordType.php" source-language="en-US" target-language="en" datatype="plaintext">
     <body>
       <trans-unit id="2871afea416378d2772937c4d67d6c2c">
